South America -> ᏧᎦᎾᏮ ᎠᎹᏰᎵ, Mexican -> ᎠᏍᏆᏂ, other place names

--- a/ᎠᏬᎭᎵ.mw
+++ b/ᎠᏬᎭᎵ.mw
@@ -17,7 +17,7 @@
 Several, see below.<br />
 &nbsp;*see Accipitriformes for family list
 }}
-'''ᏬᎭᎵ''' ᎠᎴ ᎡᏆ [[bird of prey|ᎯᎸᏍᎩ ᏥᏍᏆ ᎠᎵᏍᏓᏴᏗ]] ᎦᏙ ᎤᏍᏗ ᎦᎷᎯᏍᏗ ᎠᎬᏫᏳᏛ ᎯᎠ [[Old World|ᎠᎦᏴᎵ ᎡᎶᎯ]], ᎬᏙᏗ ᎾᏍᎩ ᎤᏩᏒ ᏔᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ([[Bald Eagle|ᎤᏍᏗᏰᎸᎭ ᏬᎭᎵ]] ᎠᎴ [[Golden Eagle|ᏓᎶᏂᎨᏍᏙᏗ ᏬᎭᎵ]]) ᏱᏓᏟᎶᏍᏔᏅ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ [[North America|ᎤᏴᏢ ᎠᎺᎵᎨ]], ᎦᏲᎵ ᎭᏫᎾᏗᏢ [[South America|ᎤᎦᎾᏭ ᎠᎺᎵᎨ]], ᏦᎢ ([[White-bellied Sea Eagle|ᎤᏁᎬ-ᏂᎯ ᎠᎺᏉᎯ ᏬᎭᎵ]], [[Little Eagle|ᎤᏍᏗ ᏬᎭᎵ]], [[Wedge-tailed Eagle|ᏧᏠᎯᏍᏗ-ᎦᏛᎢ ᏬᎭᎵ]]) ᎭᏫᎾᏗᏢ [[Australia]] ᎠᎴ ᎯᎠ [[Philippine Eagle|Philippine ᏬᎭᎵ]] ᎭᏫᎾᏗᏢ ᎯᎠ Philippine ᎠᎽᏰᎵ. ᎤᏅᏌ ᎠᎴ ᎠᏁᎳ ᎯᎠ [[bird|ᏥᏍᏆ]] ᎠᏓᏅᏍᏗ [[Falconiformes]], ᏏᏓᏁᎸᎯ [[Accipitridae]] ᎠᎴ ᎠᏓᏣᎸᏗ ᎯᎸᏍᎩ ᏄᏓᎴᎿᎥ genera, ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏎᎾᏍᎩ ᎢᏳᎵᏍᏙᏗ ᎾᎥᏂᎨᎢ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎠᏂᏏᏴᏫᎭ ᏐᎢ.
+'''ᏬᎭᎵ''' ᎠᎴ ᎡᏆ [[bird of prey|ᎯᎸᏍᎩ ᏥᏍᏆ ᎠᎵᏍᏓᏴᏗ]] ᎦᏙ ᎤᏍᏗ ᎦᎷᎯᏍᏗ ᎠᎬᏫᏳᏛ ᎯᎠ [[Old World|ᎠᎦᏴᎵ ᎡᎶᎯ]], ᎬᏙᏗ ᎾᏍᎩ ᎤᏩᏒ ᏔᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ([[Bald Eagle|ᎤᏍᏗᏰᎸᎭ ᏬᎭᎵ]] ᎠᎴ [[Golden Eagle|ᏓᎶᏂᎨᏍᏙᏗ ᏬᎭᎵ]]) ᏱᏓᏟᎶᏍᏔᏅ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ [[North America|ᏧᏴᏢ ᎠᎹᏰᎵ]], ᎦᏲᎵ ᎭᏫᎾᏗᏢ [[South America|ᏧᎦᎾᏮ ᎠᎹᏰᎵ]], ᏦᎢ ([[White-bellied Sea Eagle|ᎤᏁᎬ-ᏂᎯ ᎠᎺᏉᎯ ᏬᎭᎵ]], [[Little Eagle|ᎤᏍᏗ ᏬᎭᎵ]], [[Wedge-tailed Eagle|ᏧᏠᎯᏍᏗ-ᎦᏛᎢ ᏬᎭᎵ]]) ᎭᏫᎾᏗᏢ [[Australia|ᏒᎳᏗᏝ]] ᎠᎴ ᎯᎠ [[Philippine Eagle|Philippine ᏬᎭᎵ]] ᎭᏫᎾᏗᏢ ᎯᎠ Philippine ᎠᎽᏰᎵ. ᎤᏅᏌ ᎠᎴ ᎠᏁᎳ ᎯᎠ [[bird|ᏥᏍᏆ]] ᎠᏓᏅᏍᏗ [[Falconiformes]], ᏏᏓᏁᎸᎯ [[Accipitridae]] ᎠᎴ ᎠᏓᏣᎸᏗ ᎯᎸᏍᎩ ᏄᏓᎴᎿᎥ genera, ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏎᎾᏍᎩ ᎢᏳᎵᏍᏙᏗ ᎾᎥᏂᎨᎢ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎠᏂᏏᏴᏫᎭ ᏐᎢ.
 
 ᏬᎭᎵ ᎠᎴ ᏂᏛᎴᏅᏓ ᏐᎢ ᎠᏯᏖᎾ-ᎦᏟᏐᏗᎩ ᎯᎸᏍᎩ ᏥᏍᏆ ᎠᎵᏍᏓᏴᏗ ᎠᎬᏫᏳᏛ ᎾᎥᎢ ᎤᎾᏤᎵ ᎡᏆᎯᎨᏍᏙᏗ ᏂᎬᎢ, ᎤᏟ ᎢᎦᎢ ᎤᎳᏂᎩᏛ ᎠᏓᏁᎸ ᎠᏁᏍᎬᏗ, ᎠᎴ ᎦᎨᏓᎨ ᎠᏍᎪᎵ ᎠᎴ ᎠᏎᎯᎯ ᎢᎦ ᎠᏎᎯᎯ ᎢᎦ ᎠᏓtᎤᎬ. ᎢᏧᎳᎭ ᎯᎠ ᎠᏂᎦᏲᎵ ᏬᎭᎵ, ᎾᏍᎩᏯᎢ ᎯᎠ [[Booted Eagle|Booted ᏬᎭᎵ]], ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎠᎾᎵᏐᏈᎸᏍᎬ ᎭᏫᎾᏗᏢ ᏂᎬᎢ [[Common Buzzard|ᏧᏣᏔᏊ ᏑᎵ]] ᎠᎴ [[Red-tailed Hawk|ᎩᎦᎨ-ᎦᏛᎢ ᏔᏬᏗ]] ᎤᎭ ᏗᎦᏃᏢᎩ ᎦᏅᎯᏓᎨ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎢᏧᎳᎭ ᎠᏯᏖᎾ ᎪᏯᏛ, ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎠᏓᏎᎮᏗ, ᎦᏣᏄᎳᎯᎨ ᎤᎳᏫᏛᏓ. ᎤᎪᏗᏗ ᏬᎭᎵ ᎠᎴ ᎡᏆᎯᎨᏍᏙᏗ ᎬᎾᏬᏍᎬ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏐᎢ ᎦᏅᎾᏩ ᏧᎦᎴᏅᏓ ᏂᏛᎴᏅᏓ ᎯᎠ [[vulture|ᎦᏅᎾᏩ]].
 
@@ -127,24 +127,24 @@ Several, see below.<br />
 * '''ᎯᎸᎯᏳᎢ Rome'''. ᎯᎠ [[ancient Rome|ᎶᎻ]] ᎬᏔᏅᎯ ᎾᏍᎩ ᎾᎿ ᎯᎠ [[Aquila (Roman)|ᏰᎵᏊ ᏗᏙᎳᎩ ᎤᎾᏤᎵ]].
 
 * '''Austria'''. ᎯᎠ [[Austrian Empire|Austrian ᏓᎳᏏᏛ]] ᎠᏰᎲ ᏔᎵ-ᎠᎴᏅᏗᏍᎬ ᏬᎭᎵ ᏥᏄᏍᏗ Ꮝ ᏗᎬᏟᎶᏍᏙᏗ. ᎤᎶᏐᏅ ᎯᎠ ᎤᏲᏨᎯ [[Austria-Hungary]], [[Austria]] ᎤᎩᏒᎩ ᏥᏄᏍᏗ Ꮝ ᏗᎬᏟᎶᏍᏙᏗ ᏌᏊ-ᎠᎴᏅᏗᏍᎬ ᏬᎭᎵ ᎭᏫᎾᏗᏢ ᎯᎠ ᎪᎯᏊ ᎢᏴ ᏥᎩ [[coat of arms of Austria|ᎦᏌᎴᎾ ᏗᏂᏃᎨᏂ Austria]].
-* '''Byzantine ᏓᎳᏏᏛ ᎠᎴ Russia'''. ᎤᎶᏐᏅ ᎯᎠ ᎤᎶᏒᎩ [[Rome]], [[Constantinople]] ᎤᏑᏰᏒ ᏔᎵ-ᎠᎴᏅᏗᏍᎬ ᏓᎶᏂᎨᏍᏙᏗ ᏬᎭᎵ ᏥᏄᏍᏗ ᎯᎠ ᏓᎳᏏᏛ ᏗᎬᏟᎶᏍᏙᏗ. ᏌᏊ ᎠᏍᎪᎵ symbolized ᎯᎸᎯᏳᎢ Rome, ᎠᎴ ᎯᎠ ᏐᎢ ᎠᏍᎪᎵ symbolized ᎯᎠ "ᎢᏤ Rome" ᎾᎾᎢ Constantinople. ᎤᎶᏐᏅ ᎯᎠ ᎤᎶᏒᎩ Constantinople, ᎯᎠ [[Russian Empire|Russian ᏓᎳᏏᏛ]] ᎤᎩᏒᎩ ᎯᎠ ᏔᎵ-ᎠᎴᏅᏗᏍᎬ ᏬᎭᎵ ᏥᏄᏍᏗ Ꮝ ᎣᏤᎵ ᏗᎬᏟᎶᏍᏙᏗ.
-* '''Charlemagne ᎠᎴ ᎦᎸᏉᏗᏳ ᎶᎻ ᏓᎳᏏᏛ'''. ᎤᎶᏐᏅ ᎤᏤᎵ ᎤᏂᎪᏗᏗ ᏥᏄᏍᏗ ᎯᎠ ᎢᏤ ᎶᎻ ᏄᎬᏫᏳᏌᏕᎩ, [[Charlemagne]] ᎠᏠᏯᏍᏔᏅᎯ ᎯᎠ ᎯᎸᎯᏳᎢ [[Aquila (Roman)|ᎶᎻ ᏬᎭᎵ]] ᏥᏄᏍᏗ ᎤᏤᎵ ᎣᏤᎵ ᏗᎬᏟᎶᏍᏙᏗ. ᎯᎠ ᎦᎸᏉᏗᏳ ᎶᎻ ᏓᎳᏏᏛ ᎤᏕᏅ ᎤᏤᎵ ᎠᏰᎵ ᎤᎾᏙᏢᏒ ᎤᎩᏒᎩ ᎯᎠ ᏬᎭᎵ, ᎠᎴ ᎯᎠ [[Habsburg]]ᏅᎪᏢᎯᏌᏅ ᎯᎠ [[golden eagle|ᏓᎶᏂᎨᏍᏙᏗ ᏬᎭᎵ]] ᎾᎥᎢ [[imperial eagle|ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᏬᎭᎵ]].
+* '''Byzantine ᏓᎳᏏᏛ ᎠᎴ Russia'''. ᎤᎶᏐᏅ ᎯᎠ ᎤᎶᏒᎩ [[Rome|ᎶᎻ]], [[Constantinople]] ᎤᏑᏰᏒ ᏔᎵ-ᎠᎴᏅᏗᏍᎬ ᏓᎶᏂᎨᏍᏙᏗ ᏬᎭᎵ ᏥᏄᏍᏗ ᎯᎠ ᏓᎳᏏᏛ ᏗᎬᏟᎶᏍᏙᏗ. ᏌᏊ ᎠᏍᎪᎵ symbolized ᎯᎸᎯᏳᎢ Rome, ᎠᎴ ᎯᎠ ᏐᎢ ᎠᏍᎪᎵ symbolized ᎯᎠ "ᎢᏤ Rome" ᎾᎾᎢ Constantinople. ᎤᎶᏐᏅ ᎯᎠ ᎤᎶᏒᎩ Constantinople, ᎯᎠ [[Russian Empire|Russian ᏓᎳᏏᏛ]] ᎤᎩᏒᎩ ᎯᎠ ᏔᎵ-ᎠᎴᏅᏗᏍᎬ ᏬᎭᎵ ᏥᏄᏍᏗ Ꮝ ᎣᏤᎵ ᏗᎬᏟᎶᏍᏙᏗ.
+* '''Charlemagne ᎠᎴ ᎦᎸᏉᏗᏳ ᎶᎻ ᏓᎳᏏᏛ'''. ᎤᎶᏐᏅ ᎤᏤᎵ ᎤᏂᎪᏗᏗ ᏥᏄᏍᏗ ᎯᎠ ᎢᏤ ᎶᎻ ᏄᎬᏫᏳᏌᏕᎩ, [[Charlemagne]] ᎠᏠᏯᏍᏔᏅᎯ ᎯᎠ ᎯᎸᎯᏳᎢ [[Aquila (Roman)|ᎶᎻ ᏬᎭᎵ]] ᏥᏄᏍᏗ ᎤᏤᎵ ᎣᏤᎵ ᏗᎬᏟᎶᏍᏙᏗ. ᎯᎠ ᎦᎸᏉᏗᏳ ᎶᎻ ᏓᎳᏏᏛ ᎤᏕᏅ ᎤᏤᎵ ᎠᏰᎵ ᎤᎾᏙᏢᏒ ᎤᎩᏒᎩ ᎯᎠ ᏬᎭᎵ, ᎠᎴ ᎯᎠ [[Habsburg]]ᏅᎪᏢᎯᏌᏅ ᎯᎠ [[golden eagle|ᏬᎭᎵ]] ᎾᎥᎢ [[imperial eagle|ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᏬᎭᎵ]].
 * '''Czech ᎠᏰᎵ ᎤᏙᏢ'''. [[The Czech Republic|ᎯᎠ Czech ᎠᏰᎵ ᎤᏙᏢ]] ᏂᎦᏛ ᏦᎢ ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ ᎢᎦᏛᎭ: [[Bohemia]] (ᎬᏙᏗ ᏔᎵ ᎢᏳᏩᎫᏘ ᎦᏛᎢ ᏢᏓᏥ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏂᎧᏁᏍᏙᏗ), [[Moravia]] ᎠᎴ [[Silesia]] (ᎢᏧᎳ ᎬᏙᏗ ᏬᎭᎵ ᎠᎨᏴ ᎭᏫᎾᏗᏢ ᎤᏂᎧᏁᏍᏙᏗ - ᎩᎦᎨ-ᎠᎴ-ᎤᏁᎬ checkered ᎠᎴ ᎬᎿᎨ).
 * '''Germany ᎠᎴ Prussia'''. [[Prussia]], ᎠᎴ ᎣᏂᏯᎨᏍᏙᏗ [[Germany]] ᎤᎭ ᎬᏔᏅᎯ ᎬᎿᎨ ᏬᎭᎵ ᏥᏄᏍᏗ ᎤᎾᏤᎵ ᎬᎾᏕᎾ ᏗᎬᏟᎶᏍᏙᏗ.
 * '''Islamic'''. ᎤᎪᏗᏗ [[Islam]]ic ᎧᏃᎮᎭ ᎠᎴ organizations ᎬᏙᏗ ᏬᎭᎵ ᏥᏄᏍᏗ ᏗᎬᏟᎶᏍᏙᏗ, e.g. ᎯᎠ [[PLO]].
 * '''Poland'''. ᎤᏁᎬ ᏬᎭᎵ ᎾᎿ ᎩᎦᎨ ᏠᎨᏏ ᎨᏒᎢ ᎯᎠ [[coat of arms of Poland|ᎦᏌᎴᎾ ᏗᏂᏃᎨᏂ Poland]].	
-* '''Spain'''. ᎯᎠ "ᎠᏥᎸ ᎠᏁᎶᎯ ᎤᎬᏫᏳᎯ", Isabella ᎠᎴ Ferdinand, ᎬᏔᏅᎯ ᎯᎠ [[Golden Eagle|ᏓᎶᏂᎨᏍᏙᏗ ᏬᎭᎵ]] ᏥᏄᏍᏗ ᎢᎦᏛ ᎯᎠ ᎠᏥᎸᏉᏗ ᏴᏫ ᎠᏰᎵ. ᎯᎠ ᏬᎭᎵ ᏥᏄᏍᏛᎩ ᎾᎿ ᎯᎠ Spanish ᎠᏰᎵ ᎢᏳᏩᎪᏗ [[1978]].
+* '''Spain'''. ᎯᎠ "ᎠᏥᎸ ᎠᏁᎶᎯ ᎤᎬᏫᏳᎯ", Isabella ᎠᎴ Ferdinand, ᎬᏔᏅᎯ ᎯᎠ [[Golden Eagle|ᏓᎶᏂᎨᏍᏙᏗ ᏬᎭᎵ]] ᏥᏄᏍᏗ ᎢᎦᏛ ᎯᎠ ᎠᏥᎸᏉᏗ ᏴᏫ ᎠᏰᎵ. ᎯᎠ ᏬᎭᎵ ᏥᏄᏍᏛᎩ ᎾᎿ ᎯᎠ Spanish ᎠᏰᎵ ᎢᏳᏩᎪᏗ 1978.
 * '''ᎢᎬᏱ ᎠᎦᎸᏥ ᏓᎳᏏᏛ'''. [[Napoleon Bonaparte|ᎠᏍᏆᏂᎪᏒᏗ Bonaparte]] ᎠᏢᏔᎲᎢ ᎯᎠ ᎶᎻ ᏓᎶᏂᎨᏍᏙᏗ ᏬᎭᎵ ᏥᏄᏍᏗ ᎯᎠ ᏗᎬᏟᎶᏍᏙᏗ ᎤᏤᎵ ᎢᏤ ᎠᎦᎸᏥ ᏓᎳᏏᏛ.
 * '''Seljuk ᏨᏓᏓᏨᏍᏙᏗ''' ᎠᎴ [[Ottoman Turks|ᎠᎵᏍᏕᎸᏗ ᏨᏓᏓᏨᏍᏙᏗ]] ᎬᏔᏅᎯ ᎾᏍᎩ.
 <!-- [[Image:Divrigi02.jpg]][[Image:Selçuklu kartalı.jpg]] -->
 * '''ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏳᎳᏛ'''. ᎯᎠ ᏬᎭᎵ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎢᎦᏛ ᎯᎠ [[Coat of Arms of Romania|ᎦᏌᎴᎾ ᏗᏂᏃᎨᏂ Romania]] ᎠᎴ ᎯᎠ ᎦᏌᎴᎾ ᏗᏂᏃᎨᏂ ᎠᎴ [[flag of Moldova|ᎦᏓᏘ Moldova]]. ᎾᏍᎩ ᎨᏒᎢ ᎯᎠ ᎤᏂᎧᏁᏍᏙᏗ "Shqipëria" ᎠᎴ ''ᎦᏙᎯ ᎯᎠ ᏬᎭᎵ'', ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎤᎾᏅᏛ ᎭᏫᎾᏗᏢ ᎩᎵᏏ ᏥᏄᏍᏗ [[Albania]] (ᎠᎪᏩᏛᏗ [[The Tale of the Eagle|ᎯᎠ ᎠᏓᏃᎮᏗ ᎯᎠ ᏬᎭᎵ]] ᎾᏍᎩᎾᎢ ᎯᎠ ᎢᏰᎵᏍᏗᎢ ᎠᏓᎴᏂᏍᎬ ᎯᎠ ᏚᏙᎥ). [[Two-headed eagle|ᏔᎵ-ᎠᎴᏅᏗᏍᎬ ᏬᎭᎵ]] ᎨᏒᎢ ᎤᏂᎧᏁᏍᏙᏗ [[Coat of Arms of Serbia|Serbia]], [[Coat of Arms of Montenegro|Montenegro]], ᎠᎴ [[Coat of Arms of Serbia and Montenegro|Serbia ᎠᎴ Montenegro]]
-* '''ᎠᏂᏍᏆᏂᎢ'''. ᎯᎠ ᏥᏍᏆ ᎾᎿ ᎯᎠ [[Mexican coat of arms|Mexican ᎦᏌᎴᎾ ᏗᏂᏃᎨᏂ]] ᎠᎴ ᎦᏓᏘ ᎨᏒᎢ ᏓᎶᏂᎨᏍᏙᏗ ᏬᎭᎵ.
+* '''ᎠᏂᏍᏆᏂᎢ'''. ᎯᎠ ᏥᏍᏆ ᎾᎿ ᎯᎠ [[Mexican coat of arms|ᎠᏍᏆᏂ ᎦᏌᎴᎾ ᏗᏂᏃᎨᏂ]] ᎠᎴ ᎦᏓᏘ ᎨᏒᎢ ᏓᎶᏂᎨᏍᏙᏗ ᏬᎭᎵ.
 * '''ᎯᎠ Philippines'''. ᎯᎠ ᎦᏂᏰᎩ [[Philippine Eagle|Philippine ᏬᎭᎵ]] ᎨᏒᎢ ᎯᎠ ᎬᎾᏕᎾ ᏥᏍᏆ ᎯᎠ [[Philippines]].
-* '''USA'''. ᎯᎠ [[United States|ᎠᏫᏒᏗ ᎧᏃᎮᎭ]] ᎤᎭ ᎠᏠᏯᏍᏔᏅᎯ ᎯᎠ ᎤᏴᏢ ᏴᏩᏁᎬ [[Bald Eagle|ᎤᏍᏗᏰᎸᎭ ᏬᎭᎵ]] ᏥᏄᏍᏗ Ꮝ ᎬᎾᏕᎾ ᎤᏂᎧᏁᏍᏙᏗ. ᎾᏍᎩ ᎤᏁᎳᎩ ᎯᎠ [[Golden Eagle|ᏓᎶᏂᎨᏍᏙᏗ ᏬᎭᎵ]] ᎨᏒᎢ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ ᎤᏴᏢ ᎠᎺᎵᎨ, Ꭴ.. ᏫᏓᏎᎸᎢ ᏗᏍᏆᎸᏙᏗ "ᏬᎭᎵ" ᎠᎴ ᎢᏳᏓᎵᎭ ᎯᎠ ᎤᏍᏗᏰᎸᎭ ᏬᎭᎵ; ᎪᎯ ᎪᏍᏓᏱ ᏥᏄᏍᏛᎩ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏕᎳᎰᏒᎯ ᎾᎥᎢ [[Eagle (U.S. coin)|ᏴᏩᏁᎬ ᎠᏛᎯᏍᏙᏗ]] ᎠᏲᎱᎯᏍᏗ ᏗᏟᎶᏍᏔᏅᏍᎩ, ᎦᎪ, ᎤᏃᎮᎴᎢ ᎢᏯᏓᏛᏁᎸ "ᏬᎭᎵ", ᏓᎶᏂᎨᏍᏙᏗ ᏬᎭᎵ; ᎪᎯ ᎦᎵᏓᏍᏛ ᎨᏒᎢ ᎯᎠ ᏂᎬᏂᏏᏍᎬ ᎯᎠ ᎢᎦᏪᏛ "ᏚᏳᎪᏛ ᎢᏯᏛᏁᎸ ᏂᎨᏒᎾ ᏬᎭᎵ". ᎯᎠ ᏚᏙᎥ ᎠᎴ ᏗᎬᏟᎶᏍᏙᏗ ᎯᎠ ᏩᎦᎸᎳᏗᏴ ᎢᏴ ᎠᏂᏙᎾᎥ ᎭᏫᎾᏗᏢ ᎯᎠ [[Boy Scouts of America|ᎠᏧᏣ ᎠᏂᎦᏖᏃ ᎠᎺᎵᎨ]] ᎨᏒᎢ ᎯᎠ [[Eagle Scout (Boy Scouts of America)|ᎤᏍᏗᏰᎸᎭ ᏬᎭᎵ]].
+* '''USA'''. ᎯᎠ [[United States|ᎠᎹᏰᏟ]] ᎤᎭ ᎠᏠᏯᏍᏔᏅᎯ ᎯᎠ ᎤᏴᏢ ᏴᏩᏁᎬ [[Bald Eagle|ᎤᏍᏗᏰᎸᎭ ᏬᎭᎵ]] ᏥᏄᏍᏗ Ꮝ ᎬᎾᏕᎾ ᎤᏂᎧᏁᏍᏙᏗ. ᎾᏍᎩ ᎤᏁᎳᎩ ᎯᎠ [[Golden Eagle|ᏓᎶᏂᎨᏍᏙᏗ ᏬᎭᎵ]] ᎨᏒᎢ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ ᎤᏴᏢ ᎠᎺᎵᎨ, Ꭴ.. ᏫᏓᏎᎸᎢ ᏗᏍᏆᎸᏙᏗ "ᏬᎭᎵ" ᎠᎴ ᎢᏳᏓᎵᎭ ᎯᎠ ᎤᏍᏗᏰᎸᎭ ᏬᎭᎵ; ᎪᎯ ᎪᏍᏓᏱ ᏥᏄᏍᏛᎩ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏕᎳᎰᏒᎯ ᎾᎥᎢ [[Eagle (U.S. coin)|ᏴᏩᏁᎬ ᎠᏛᎯᏍᏙᏗ]] ᎠᏲᎱᎯᏍᏗ ᏗᏟᎶᏍᏔᏅᏍᎩ, ᎦᎪ, ᎤᏃᎮᎴᎢ ᎢᏯᏓᏛᏁᎸ "ᏬᎭᎵ", ᏓᎶᏂᎨᏍᏙᏗ ᏬᎭᎵ; ᎪᎯ ᎦᎵᏓᏍᏛ ᎨᏒᎢ ᎯᎠ ᏂᎬᏂᏏᏍᎬ ᎯᎠ ᎢᎦᏪᏛ "ᏚᏳᎪᏛ ᎢᏯᏛᏁᎸ ᏂᎨᏒᎾ ᏬᎭᎵ". ᎯᎠ ᏚᏙᎥ ᎠᎴ ᏗᎬᏟᎶᏍᏙᏗ ᎯᎠ ᏩᎦᎸᎳᏗᏴ ᎢᏴ ᎠᏂᏙᎾᎥ ᎭᏫᎾᏗᏢ ᎯᎠ [[Boy Scouts of America|ᎠᏧᏣ ᎠᏂᎦᏖᏃ ᎠᎺᎵᎨ]] ᎨᏒᎢ ᎯᎠ [[Eagle Scout (Boy Scouts of America)|ᎤᏍᏗᏰᎸᎭ ᏬᎭᎵ]].
 
 == ᏬᎭᎵ ᏥᏄᏍᏗ ᏧᏁᎸᏗᏯ ᏓᎦᏘᎴᎦ ==
 
-ᎭᏫᎾᏗᏢ Jewish ᎧᏃᎮᎸᎯ ᎯᎠ ᏬᎭᎵ ᎨᏒᎢ ᏗᎬᏟᎶᏍᏙᏗ ᎤᏙᎯᏳ ᎢᎦᎢ ᎢᎦᏘ, ᎠᎴ ᎯᎠ ᎠᏰᎵ ᎤᏙᏢᏒ ᎤᏤᎵ ᏭᏔᏅ ᏗᏓᏘᏁᎯ ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ ᎡᏆ ᏗᏕᎶᏆᏍᎩ ᎯᎠ ᎠᏰᎵ ᎤᎧᏁᎳ Maimonides ᎠᎴ ᎯᎠ Lubavitcher Rebbe, ᏧᏏ ᎠᎵᏣᏙᎲᏍᎩ Menachem M. Schneerson, ᎯᎠ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᎢᎦ ᏗᏓᏘᏁᎯ ᎡᎶᎯ Jewry ᎤᎭ ᏭᏪᏙᎢ ᏩᏎᎸᎯ ᎾᎥᎢ ᎤᎾᏤᎵ ᏧᏂᏠᏱ ᎠᎴ ᏙᎾᏕ ᎶᏆᏍᎩ ᏥᏄᏍᏗ "ᎯᎠ ᎡᏆ ᏬᎭᎵ". ᎯᎠ Torah ᎤᏠᏱ ᎢᎬᏁᏗ G-d ᎤᏩᏒᎠᏍᎦᏯ ᏬᎭᎵ ᎭᏫᎾᏗᏢ Deuteronomy, 32.11-12. "ᏥᏄᏍᏗ ᏬᎭᎵ ᎠᏓᏃᎯᏎᏗ Ꮝ ᎤᏁᏍᎩᎸᏒ, ᏂᎦᏛᎢ ᎦᏬᎯᎸᏙᏗ Ꮝ fledglings, ᎾᏍᎩ ᎠᏰᏍᏛᏗ Ꮝ ᎪᏯᏛ, ᎠᎩᏍᎬᎢ ᎠᏂ ᎠᎴ ᎠᏫᏗᏍᎬ ᎠᏂ ᎾᎿ Ꮝ ᏧᏠᎯᏍᏗ. [So] ᎯᎠ ᎤᏁᎳᏅᎯ ᎠᏂ [the Israelites] ᎤᏩᏒ, ᎠᎴ ᎾᎿᎢ ᏥᏄᏍᏛᎩ Ꮭ ᎬᏙᏗ ᎤᏁᎳᏅᎯ ᎠᎦᏘᏯ ᎬᏙᏗ ᎾᏍᎩ ᎠᏍᎦᏯ."
+ᎭᏫᎾᏗᏢ Jewish ᎧᏃᎮᎸᎯ ᎯᎠ ᏬᎭᎵ ᎨᏒᎢ ᏗᎬᏟᎶᏍᏙᏗ ᎤᏙᎯᏳ ᎢᎦᎢ ᎢᎦᏘ, ᎠᎴ ᎯᎠ ᎠᏰᎵ ᎤᏙᏢᏒ ᎤᏤᎵ ᏭᏔᏅ ᏗᏓᏘᏁᎯ ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ ᎡᏆ ᏗᏕᎶᏆᏍᎩ ᎯᎠ ᎠᏰᎵ ᎤᎧᏁᎳ Maimonides ᎠᎴ ᎯᎠ Lubavitcher Rebbe, ᏧᏏ ᎠᎵᏣᏙᎲᏍᎩ Menachem M. Schneerson, ᎯᎠ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᎢᎦ ᏗᏓᏘᏁᎯ ᎡᎶᎯ Jewry ᎤᎭ ᏭᏪᏙᎢ ᏩᏎᎸᎯ ᎾᎥᎢ ᎤᎾᏤᎵ ᏧᏂᏠᏱ ᎠᎴ ᏙᎾᏕ ᎶᏆᏍᎩ ᏥᏄᏍᏗ "ᎯᎠ ᎡᏆ ᏬᎭᎵ". ᎯᎠ Torah ᎤᏠᏱ ᎢᎬᏁᏗ G-d ᎤᏩᏒᎠᏍᎦᏯ ᏬᎭᎵ ᎭᏫᎾᏗᏢ Deuteronomy, 32.11-12. "ᏥᏄᏍᏗ ᏬᎭᎵ ᎠᏓᏃᎯᏎᏗ Ꮝ ᎤᏁᏍᎩᎸᏒ, ᏂᎦᏛᎢ ᎦᏬᎯᎸᏙᏗ Ꮝ fledglings, ᎾᏍᎩ ᎠᏰᏍᏛᏗ Ꮝ ᎪᏯᏛ, ᎠᎩᏍᎬᎢ ᎠᏂ ᎠᎴ ᎠᏫᏗᏍᎬ ᎠᏂ ᎾᎿ Ꮝ ᏧᏠᎯᏍᏗ. [So] ᎯᎠ ᎤᏁᎳᏅᎯ ᎠᏂ [[the Israelites]] ᎤᏩᏒ, ᎠᎴ ᎾᎿᎢ ᏥᏄᏍᏛᎩ Ꮭ ᎬᏙᏗ ᎤᏁᎳᏅᎯ ᎠᎦᏘᏯ ᎬᏙᏗ ᎾᏍᎩ ᎠᏍᎦᏯ."
 
 ᎯᎠ ᏬᎭᎵ ᎨᏒᎢ ᎦᎸᏉᏗ ᏥᏍᏆ ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎥᎦᏔᎲᎢ ᎠᎴ ᎯᎠ ᏧᎷᏄᎯ ᎯᎠ ᏬᎭᎵ ᎠᎴ ᎠᏰᎵ ᎤᎪᏗᏗ [[religious|ᏧᏁᎸᏗᏯ]] ᎠᎴ [[spiritual|ᎠᏂᏏᏴᏫ ᏄᎾᏍᏛ]] ᏄᏍᏛ ᎢᏳᎾᏛᏁᏗ, ᎾᏍᎩ ᎨᏒᎢ ᏧᏠᎯᏍᏗ [[Native Americans|ᎾᏰᎯᏯ ᏴᏩᏁᎬ]]. ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᎬᎨᏳᎢ ᏬᎭᎵ ᏥᏄᏍᏗ ᎦᎸᏉᏗ ᏧᏁᎸᏗᏯ ᏓᎦᏘᎴᎦ ᎠᎴ ᎯᎠ ᏧᎷᏄᎯ ᎠᎴ ᎢᎦᏛᎭ [[Bald Eagle|ᎤᏍᏗᏰᎸᎭ]] ᎠᎴ [[ᏬᎭᎵ]] ᎠᎴ ᎢᏳᏓᎵᎭ ᎤᏠᏱᎭᎢ ᎯᎠ [[ᏧᎭᎨᏓ ᎪᏪᎵ]] ᎠᎴ [[ᎤᏯᎾᏛᏁᏗ]]. ᏬᎭᎵ ᏧᎷᏄᎯ ᎠᎴ ᎢᏳᏓᎵᎭ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ ᏧᏓᎴᏅᏓ ᎠᎴ ᎠᎴ ᎬᏔᏅᎯ ᎠᏥᎸᏉᏗ ᏂᎬᎢ ᎠᏛᎯᏍᏙᏗ ᎠᎴ ᎢᎦ ᏦᏍᏓ ᏯᏛᎿ ᏥᏄᏍᏗ ᎾᏍᎩᏍᎩᏂ ᎤᏩᏒ ᎠᎴ ᎠᎵᎦᎵᏴᎯ.
 
