Mexican -> ᎠᏍᏆᏂ, transliterations

--- a/ᏡᎬᎢ.mw
+++ b/ᏡᎬᎢ.mw
@@ -5,7 +5,7 @@
 
 == ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ ==
 [[File:Raunkiaer.jpg|200px|right|thumb| [[oak|ᏧᏍᎦ]] ᏡᎬ ᎭᏫᎾᏗᏢ [[Denmark]]]]
-ᏡᎬ ᎨᏒᎢ ᎦᎪᏘ ᎤᏙᏢᏒ ᎠᎴ ᏕᏡᎬ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏄᏓᎴᎿᎥ [[order (biology)|ᏓᎾᏓᏅᏍᎬᎢ]] ᎠᎴ [[family (biology)|ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ]] digakohidi. ᏕᏡᎬ ᎯᎠ ᎢᏴ ᎤᎾᏛᏁᎸᏗ ᎠᏯᏖᎾ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᎤᏛᏏᏗᏒ ᎤᏙᏢᏒ, ᎤᎦᎶᎬ ᏗᎦᎪᏗ ᎠᎴ ᎤᏙᏢᏒᎢ, ᎤᏯᎸ ᎨᎦᏓᏅᏖᏗ, ᎠᏤᎯᏐᏗᏱ ᎠᏛᎯᏍᏙᏗ, ᎠᎴ ᎤᏠᏯᏍᏗ.
+ᏡᎬ ᎨᏒᎢ ᎦᎪᏘ ᎤᏙᏢᏒ ᎠᎴ ᏕᏡᎬ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏄᏓᎴᎿᎥ [[order (biology)|ᏓᎾᏓᏅᏍᎬᎢ]] ᎠᎴ [[family (biology)|ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ]] ᏗᎦᎪᎯᏗ. ᏕᏡᎬ ᎯᎠ ᎢᏴ ᎤᎾᏛᏁᎸᏗ ᎠᏯᏖᎾ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᎤᏛᏏᏗᏒ ᎤᏙᏢᏒ, ᎤᎦᎶᎬ ᏗᎦᎪᏗ ᎠᎴ ᎤᏙᏢᏒᎢ, ᎤᏯᎸ ᎨᎦᏓᏅᏖᏗ, ᎠᏤᎯᏐᏗᏱ ᎠᏛᎯᏍᏙᏗ, ᎠᎴ ᎤᏠᏯᏍᏗ.
 
 ᎯᎠ ᎢᎬᏱᏗᏢᏍᏗ ᏕᏡᎬ ᎨᏒᎩ [[tree fern|ᏡᎬ ᏲᎾ ᏤᏍ]]ᎠᎴ [[horsetail]], ᎦᏙ ᎤᏍᏗ ᎤᏛᏒ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎠᏙᎯ ᎢᎾᎨ ᎭᏫᎾᏗᏢ ᎯᎠ [[Carboniferous]] ᎠᎴᏫᏍᏙᏗ; ᏡᎬ ᏲᎾ ᏤᏍ ᏙᎢ ᏩᎵᏃᎯᏯᏍᎬ, ᎠᎴ ᎯᎠ ᎾᏍᎩ ᎤᏩᏒ ᏩᎵᏃᎯᏯᏍᎬ horsetails ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᏡᎬ ᎤᏙᏢᏒ. ᎣᏂᏯᎨᏍᏙᏗ, ᎭᏫᎾᏗᏢ ᎯᎠ [[Triassic]] ᎠᎴᏫᏍᏙᏗ, [[Pinophyta|conifers]], [[ginkgo]], [[cycad]]ᎠᎴ ᏐᎢ [[gymnosperm]]ᎤᎾᏄᎪᏨ, ᎠᎴ ᎠᏍᏓᏩᏗᏒ [[flowering plant|ᎠᏛᎯᏍᏙᏗ ᎦᎪᏘ]]ᎭᏫᎾᏗᏢ ᎯᎠ [[Cretaceous|ᎤᎾᏥ]] ᎠᎴᏫᏍᏙᏗ. ᎤᎪᏗᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏕᏡᎬ ᎪᎯ ᎢᎦ ᎠᎴ ᎠᏛᎯᏍᏙᏗ digakohidi ᎠᎴ conifers. ᎯᎠ ᏙᎪᏩᎸ ᎡᎳᏗᏢ ᎠᏓᏁᏗ ᏱᏓᏟᎶᏍᏔᏅ ᎤᎪᏗᏗ ᎠᏔᎴᏒ ᎠᎹᏱ-ᎤᎾᏅᏛ ᏕᏡᎬ ᎠᎴ ᎯᎳᎪ ᎤᏅᏌ ᎠᎴ ᎢᏯᏛᏁᎵᏓᏍᏗ classified.
 
@@ -22,7 +22,7 @@
 
 ᎯᎠ ᎠᎲᏏᏓᏍᏗ ᏡᎬ ᎠᎴ ᏂᎦᎥᏊ embedded ᎭᏫᎾᏗᏢ ᎡᎶᎯ, ᎠᎾᏓᏁᎳᏍᎬ ᎦᎷᎯᏍᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᎦᎸᎳᏗᏢ-ᎦᏙᎯ [[biomass]] ᎠᎴ ᎤᎵᏁᏨ ᎢᏯᏛᏁᏗ [[water|ᎠᎹ]] ᎠᎴ [[nutrients]] ᏂᏛᎴᏅᏓ ᎯᎠ [[soil|ᎦᏙᎯ]]. ᎾᏍᎩ ᎢᏳᏗᎾ ᎾᏍᏋ ᎪᏪᎶᏗ, ᏱᏂᎬᏛᎾ, Ꮎ ᎾᎯᏳᎢ ᎦᏙᎯ nutrients ᎠᎴ ᎤᎵᏍᎨᏛ ᏡᎬ ᎤᏤᎵ ᎤᏛᏏᏗᏒ ᎯᎠ ᎤᏂᎪᏗᏗ Ꮝ biomass ᎦᎷᎦ ᏂᏛᎴᏅᏓ carbondioxide ᎠᎦᏎᏍᏙᏗ ᏂᏛᎴᏅᏓ ᎯᎠ ᎦᏃᎴᏍᎬ (ᎠᎪᏩᏛᏗ [[photosynthesis]]). ᎦᎸᎳᏗᏢ ᎦᏙᎯ, ᎯᎠ ᎧᏁᏌᎢ ᎠᏓᏁᏗ ᏂᎦᏛᎢ ᎯᎠ ᎤᎦᎶᎬ-ᎠᎾᎵᏐᏈᎸᏍᎬ ᏚᏩᏂᎦᎸ, ᎠᏓᏍᏕᎸᏗ ᎭᏫᎾᏗᏢ ᎠᏓᎪᏅᏙᏗᏱ ᎬᏙᏗ ᏐᎢ ᎦᎪᏘ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎾᏍᎩᎾᎢ [[sunlight]]. ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏕᏡᎬ, ᎯᎠ ᎠᏓᏁᎳᏅᎯ ᎯᎠ ᏚᏩᏂᎦᎸ optimizes ᎦᎾᏄᎪᏨᎢ ᎯᎠ ᏧᎦᎶᎦ sunlight.
 
-ᎾᏍᎩ ᏂᎨᏒᎾ ᏂᎦᏛ ᏕᏡᎬ ᎤᎭ ᏂᎦᏛ ᎯᎠ ᎦᎪᏘ ᎤᏔᎾ ᏗᎧᏃᎩᏍᏗ ᎠᎴ ᎢᎦᏛᎭ ᎤᏁᎢᏍᏔᏅᎩ ᎦᎸᎳᏗᏢ. ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎤᎪᏗᏗ ᏂᎦᏅᎯᏒ ᏕᏡᎬ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ branched, ᎯᎠ [[Saguaro|saguaro ᎤᎵᏰᏍᏗ]] ᎤᏴᏢ ᎠᎺᎵᎨ ᎤᎭ Ꮭ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏧᎦᎶᎦ, [[tree fern|ᏡᎬ ᏲᎾ ᏤᏍ]]ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏛᎯᏍᏙᏗ ᎤᏯᎸ, ᎠᎴ ᎤᏠᏯᏍᏗ. ᏚᎳᏏᏔᏅᎩ ᎾᎿ ᎤᎾᏤᎵ ᏂᎦᎥ ᎤᏙᏢᏒᎢ ᎠᎴ ᏂᎬᎢ, ᏂᎦᏛ ᎾᏍᎩ ᎯᎠ ᎠᎴ nonetheless ᏂᎦᎥᏊ ᎾᏍᎩ ᎠᏰᎸᏅ ᏥᏄᏍᏗ ᏕᏡᎬ. ᎤᏙᎯᏳᎢ, ᏱᏓᏟᎶᏍᏔᏅ ᏂᎬᎢ ᎨᏒᎢ ᎯᎠ ᎤᏟ ᎢᎦᎢ ᎤᎵᏍᎨᏛ ᏗᏓᏁᏤᏗ. ᎦᎪᏘ ᎤᏙᏢᏒ Ꮎ ᎨᏒᎢ ᎤᏠᏱ ᏡᎬ, ᎠᎴ ᏂᎦᎥᏊ ᎤᎲᎢ ᎠᏂᎦᏲᎵ, ᏎᏍᏗ ᎧᏁᏌᎢ ᎠᎴ/ᎠᎴ ᏚᏩᏂᎦᎸ Ꮎ ᏗᎶᏗ ᎾᎥᏂᎨ ᎯᎠ ᎦᏙᎯ, ᎨᏒᎢ ᎤᏯᏅᎲ [[shrub|ᎦᎪᏘ]]. ᏱᏂᎬᏛᎾ, Ꮭ ᎪᏍᏓᏯ ᎠᏓᏃᎮᏗ ᎠᏰᎵ ᎦᎪᏘ ᎠᎴ ᏕᏡᎬ ᎨᏒᎢ ᏰᎵᏊ. ᎠᏓᏁᎸ ᎤᎾᏤᎵ ᎤᏍᏗ ᏂᎬᎢ, [[bonsai]] digakohidi ᏯᏓᎢᏗᏏ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏦᏍᏗ ᏂᎬᎿᏅ ᎾᏍᏋ 'ᏕᏡᎬ', ᎠᎴ ᏌᏊ ᎢᏳᏗᎾ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏦᎠᏎᏙᏗ ᏩᏎᎸᎯ ᎯᎠ ᎤᏙᏢᏒ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎬᏙᏗ ᎯᎠ ᏂᎬᎢ ᎠᎴ ᎤᏙᏢᏒᎢ ᎠᏂᏏᏴᏫᎭ digotsaledg digovhi. ᏕᎦᏅᎦᎵᏍᎬ ᎠᏲᎵ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᏰᎵ ᎢᎩᏛ ᎯᎠ ᏩᏎᏍᏗ ᎾᎿ ᏡᎬ, ᎠᎴ ᏂᎦᏛ ᏕᎦᏅᎦᎵᏍᎬ ᎠᎴ ᏕᏡᎬ. [[Bamboo]]ᎾᎥᎢ ᏧᏓᎴᎾᎢ, ᎿᏛᎦ ᎤᎾᏛᏁᎸᏗ ᎤᎪᏗᏗ ᎯᎠ ᎨᎦᏓᏅᏖᏗ ᏕᏡᎬ, ᎩᎳ ᎠᎴ ᎢᏅᎯ ᎢᏳᏓᎵ ᎤᏯᏅᎲ ᏕᏡᎬ.
+ᎾᏍᎩ ᏂᎨᏒᎾ ᏂᎦᏛ ᏕᏡᎬ ᎤᎭ ᏂᎦᏛ ᎯᎠ ᎦᎪᏘ ᎤᏔᎾ ᏗᎧᏃᎩᏍᏗ ᎠᎴ ᎢᎦᏛᎭ ᎤᏁᎢᏍᏔᏅᎩ ᎦᎸᎳᏗᏢ. ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎤᎪᏗᏗ ᏂᎦᏅᎯᏒ ᏕᏡᎬ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ branched, ᎯᎠ [[Saguaro|saguaro ᎤᎵᏰᏍᏗ]] ᎤᏴᏢ ᎠᎺᎵᎨ ᎤᎭ Ꮭ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏧᎦᎶᎦ, [[tree fern|ᏡᎬ ᏲᎾ ᏤᏍ]]ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏛᎯᏍᏙᏗ ᎤᏯᎸ, ᎠᎴ ᎤᏠᏯᏍᏗ. ᏚᎳᏏᏔᏅᎩ ᎾᎿ ᎤᎾᏤᎵ ᏂᎦᎥ ᎤᏙᏢᏒᎢ ᎠᎴ ᏂᎬᎢ, ᏂᎦᏛ ᎾᏍᎩ ᎯᎠ ᎠᎴ nonetheless ᏂᎦᎥᏊ ᎾᏍᎩ ᎠᏰᎸᏅ ᏥᏄᏍᏗ ᏕᏡᎬ. ᎤᏙᎯᏳᎢ, ᏱᏓᏟᎶᏍᏔᏅ ᏂᎬᎢ ᎨᏒᎢ ᎯᎠ ᎤᏟ ᎢᎦᎢ ᎤᎵᏍᎨᏛ ᏗᏓᏁᏤᏗ. ᎦᎪᏘ ᎤᏙᏢᏒ Ꮎ ᎨᏒᎢ ᎤᏠᏱ ᏡᎬ, ᎠᎴ ᏂᎦᎥᏊ ᎤᎲᎢ ᎠᏂᎦᏲᎵ, ᏎᏍᏗ ᎧᏁᏌᎢ ᎠᎴ/ᎠᎴ ᏚᏩᏂᎦᎸ Ꮎ ᏗᎶᏗ ᎾᎥᏂᎨ ᎯᎠ ᎦᏙᎯ, ᎨᏒᎢ ᎤᏯᏅᎲ [[shrub|ᎦᎪᏘ]]. ᏱᏂᎬᏛᎾ, Ꮭ ᎪᏍᏓᏯ ᎠᏓᏃᎮᏗ ᎠᏰᎵ ᎦᎪᏘ ᎠᎴ ᏕᏡᎬ ᎨᏒᎢ ᏰᎵᏊ. ᎠᏓᏁᎸ ᎤᎾᏤᎵ ᎤᏍᏗ ᏂᎬᎢ, [[bonsai]] ᏗᎦᎪᎯᏗ ᏯᏓᎢᏗᏏ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏦᏍᏗ ᏂᎬᎿᏅ ᎾᏍᏋ 'ᏕᏡᎬ', ᎠᎴ ᏌᏊ ᎢᏳᏗᎾ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏦᎠᏎᏙᏗ ᏩᏎᎸᎯ ᎯᎠ ᎤᏙᏢᏒ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎬᏙᏗ ᎯᎠ ᏂᎬᎢ ᎠᎴ ᎤᏙᏢᏒᎢ ᎠᏂᏏᏴᏫᎭ digotsaledg digovhi. ᏕᎦᏅᎦᎵᏍᎬ ᎠᏲᎵ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᏰᎵ ᎢᎩᏛ ᎯᎠ ᏩᏎᏍᏗ ᎾᎿ ᏡᎬ, ᎠᎴ ᏂᎦᏛ ᏕᎦᏅᎦᎵᏍᎬ ᎠᎴ ᏕᏡᎬ. [[Bamboo]] ᎾᎥᎢ ᏧᏓᎴᎾᎢ, ᎿᏛᎦ ᎤᎾᏛᏁᎸᏗ ᎤᎪᏗᏗ ᎯᎠ ᎨᎦᏓᏅᏖᏗ ᏕᏡᎬ, ᎩᎳ ᎠᎴ ᎢᏅᎯ ᎢᏳᏓᎵ ᎤᏯᏅᎲ ᏕᏡᎬ.
 
 == ᎣᏍᏓᎯᎨ ᏕᏡᎬ ==
 ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎣᏍᏓᎯᎨ ᏕᏡᎬ ᏰᎵᏇ ᎾᏍᏋ ᎠᎦᏎᏍᏔᏅ ᎾᎿ ᎯᎸᏍᎩ ᎦᏃᏢᎩ ᏄᎬᏫᏳᏒ; ᏂᎦᏛᎢ, ᎧᏁᏌᎢ ᎠᏰᎵ ᎠᏍᏓᏅᏅ ᎠᎴ ᏕᎬᏔᏛ, ᏂᎦᏛ ᎦᏟᏌᏅ ᏂᎬᎢ, ᎠᎴ lyudetiyvda. ᎾᏍᎩ ᎨᏒᎢ ᎦᏛᎬᎢ Ꮎ ᎭᏫᎾᏗᏢ ᎠᏂᏏᏴᏫᎭ ᎦᎸᏛ ᎧᏁᏌᎢ, ᎯᎠ ᎦᏚᎢ ᎾᎿ ᎦᏙᎬ ᎨᏒᎢ ᏂᎪᎯᎸᎢ ᎠᏰᎲᎩ ᎾᎥᎢ [[Pinophyta|conifer]], ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᏄᏓᎴᎿᎥ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎭᏫᎾᏗᏢ ᎠᏂᏏᏴᏫᎭ ᎦᎸᏛ ᎧᏁᏌᎢ; ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏗᏟᎶᏍᏗ, ᎯᎠ ᏔᎵᏁ ᏅᎩᏁ ᏚᏙᏢᏒᎢ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎠᏰᎲᎩ ᎾᎥᎢ conifers.
@@ -206,7 +206,7 @@
 * [[Sapindaceae]] (ᎠᏠᏯᏍᏗᏍᎩ [[Aceraceae]], [[Aesculus|Hippocastanaceae]]) ([[Soapberry]] ᏏᏓᏁᎸᎯ)
 ** [[Maple|ᏢᏩᎦ]], ''Acer'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
 ** [[Aesculus|ᎤᏍᏆᏓ, ᏐᏈᎵ-ᎤᎾᎩᎾ]], ''Aesculus'' ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
-** [[Mexican Buckeye|Mexican ᎤᏍᏆᏓ]], ''Ungnadia speciosa''
+** [[Mexican Buckeye|ᎠᏍᏆᏂ ᎤᏍᏆᏓ]], ''Ungnadia speciosa''
 ** [[Lychee]], ''Litchi sinensis''
 ** [[Koelreuteria|ᏓᎶᏂᎨᏍᏙᏗ ᎠᎦᏍᎬ ᏡᎬ]], ''Koelreuteria''
 * [[Sapotaceae]] ([[Sapodilla]] ᏏᏓᏁᎸᎯ)
