translating place names

--- a/ᏙᏒᏓᎵ.mw
+++ b/ᏙᏒᏓᎵ.mw
@@ -53,7 +53,7 @@
 
 ᎯᎠ ᏦᎢ ᏄᎬᏫᏳᏒ ᎠᏰᏗ ᎢᏳᏓᏛ ᎯᎠ ᏙᏒᏓᎵ ᎠᏰᎸ ᎯᎠ ᎠᏍᎪᎵ, [[mesosoma]] ᎠᎴ [[metasoma]].
 
-ᎯᎠ ᎠᏍᎪᎵ ᏙᏒᏓᎵ ᎤᎭ ᎤᎪᏗᏗ ᎤᎵᏍᎨᏛ ᎢᎦᏛᎭ. ᏙᏒᏓᎵ ᏗᎦᏙᎵ [[compound eye|ᎠᏑᏰᎲᎯ ᎠᎦᏙᎵ]], ᎤᏠᏱ [[fly|ᏛᎦ]] ᏗᎦᏙᎵ: ᎤᏅᏌ ᎤᎭ ᎤᎪᏗᏗ ᎤᏍᏗ ᏗᎦᏙᎵ ᎠᏠᏯᏍᏔᏅ ᎢᏧᎳ ᎦᏙ ᎤᏍᏗ ᏰᎵ ᎢᏳᎵᏍᏙᏗ ᎠᏂ ᎠᎪᏩᏛᏗ ᎠᏓᏅᏏᏙᎠ ᎤᏙᎯᏳ ᎠᏔᎴᏒ ᎠᎹᏱ.  ᎤᎪᏗᏗ ᏙᏒᏓᎵ ᎤᎭ ᎤᏲᎢᏳᏛᏀᎡᏕᎩ ᎤᏁᎫᏥᏛ ᎠᎪᏩᏛᏗ; ᎢᎦᏛ ᏗᎨᏫ ᏂᎦᏛ.  ᎦᏲᎵ ᎤᎭ ᎾᏍᎩᏍᎩᏂ ᎤᏩᏒ ᎠᎪᏩᏛᏗ ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ, ᏯᏛᎿ ᏥᏄᏍᏗ [[Australia]] ᎤᏤᎵ [[bulldog ant|ᎠᎵᏁᎩ ᎪᏪᎵ ᏙᏒᏓᎵ]]. ᎾᏍᎩ ᎾᏍᏇ ᎠᏠᏯᏍᏔᏅ ᎯᎠ ᎠᏍᎪᎵ ᏙᏒᏓᎵ ᏔᎵ [[antenna (biology)|ᎠᏒᎾᏍᏗ]]. ᎯᎠ ᎠᏒᎾᏍᏗ ᎤᏤᎵᏛ ᎦᏩᏒᎬ ᎤᏔᎾ ᏗᎧᏃᎩᏍᏗ Ꮎ ᎠᎵᏍᏕᎸᏗ ᏙᏒᏓᎵ ᏗᏓᏛᎪᏔᏅ. ᏙᏒᏓᎵ ᏣᏥᏲᎯᏍᏗ [[pheromone]](chemicals Ꮎ ᎤᎭ ᏄᏓᎴᎿᎥ ᎦᏩᏒᎬ) ᏗᏓᏛᎪᏔᏅ ᎬᏙᏗ ᎠᏂᏏᏴᏫᎭ ᏐᎢ ᎠᎴ ᎯᎠ ᎠᏒᎾᏍᏗ ᎠᏑᏰᏍᏗ ᎾᏍᎩ ᎯᎠ ᎦᏩᏒᎬ ᏥᏄᏍᏗ ᎪᏪᎶᏗ. ᎯᎠ ᎠᏍᎪᎵ ᎾᏍᎩ ᎾᏍᏇ ᎤᎭ ᏔᎵ ᎤᎳᏂᎩᏓ ᏗᏓᏇᏄᎩᏍᏗ, ᎯᎠ [[Mandible (insect)|ᎠᎵᏍᏓᏴᏗ]], ᎦᏙ ᎤᏍᏗ ᎬᏔᏅᎯ ᎠᏫᏛᏗ ᎠᎵᏍᏓᏴᏗ, ᎠᏍᎪᏍᏗ, ᎠᎴ ᎠᏥᏍᏕᎵ. ᏀᎾᎢ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎤᏍᏗ ᎠᏜᏩᏛ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎣᎵ ᎭᏢᏃ ᏙᏒᏓᎵ ᏰᎵᏇ ᎠᏓᎾᏅ ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᏓᏁᏗ ᎠᏂᏐᎢ ᎭᏫᎾᏗᏢ ᎤᏚᎳᏗ.
+ᎯᎠ ᎠᏍᎪᎵ ᏙᏒᏓᎵ ᎤᎭ ᎤᎪᏗᏗ ᎤᎵᏍᎨᏛ ᎢᎦᏛᎭ. ᏙᏒᏓᎵ ᏗᎦᏙᎵ [[compound eye|ᎠᏑᏰᎲᎯ ᎠᎦᏙᎵ]], ᎤᏠᏱ [[fly|ᏛᎦ]] ᏗᎦᏙᎵ: ᎤᏅᏌ ᎤᎭ ᎤᎪᏗᏗ ᎤᏍᏗ ᏗᎦᏙᎵ ᎠᏠᏯᏍᏔᏅ ᎢᏧᎳ ᎦᏙ ᎤᏍᏗ ᏰᎵ ᎢᏳᎵᏍᏙᏗ ᎠᏂ ᎠᎪᏩᏛᏗ ᎠᏓᏅᏏᏙᎠ ᎤᏙᎯᏳ ᎠᏔᎴᏒ ᎠᎹᏱ.  ᎤᎪᏗᏗ ᏙᏒᏓᎵ ᎤᎭ ᎤᏲᎢᏳᏛᏀᎡᏕᎩ ᎤᏁᎫᏥᏛ ᎠᎪᏩᏛᏗ; ᎢᎦᏛ ᏗᎨᏫ ᏂᎦᏛ.  ᎦᏲᎵ ᎤᎭ ᎾᏍᎩᏍᎩᏂ ᎤᏩᏒ ᎠᎪᏩᏛᏗ ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ, ᏯᏛᎿ ᏥᏄᏍᏗ [[ᏒᎳᏗᏝ]] ᎤᏤᎵ [[bulldog ant|ᎠᎵᏁᎩ ᎪᏪᎵ ᏙᏒᏓᎵ]]. ᎾᏍᎩ ᎾᏍᏇ ᎠᏠᏯᏍᏔᏅ ᎯᎠ ᎠᏍᎪᎵ ᏙᏒᏓᎵ ᏔᎵ [[antenna (biology)|ᎠᏒᎾᏍᏗ]]. ᎯᎠ ᎠᏒᎾᏍᏗ ᎤᏤᎵᏛ ᎦᏩᏒᎬ ᎤᏔᎾ ᏗᎧᏃᎩᏍᏗ Ꮎ ᎠᎵᏍᏕᎸᏗ ᏙᏒᏓᎵ ᏗᏓᏛᎪᏔᏅ. ᏙᏒᏓᎵ ᏣᏥᏲᎯᏍᏗ [[pheromone]](chemicals Ꮎ ᎤᎭ ᏄᏓᎴᎿᎥ ᎦᏩᏒᎬ) ᏗᏓᏛᎪᏔᏅ ᎬᏙᏗ ᎠᏂᏏᏴᏫᎭ ᏐᎢ ᎠᎴ ᎯᎠ ᎠᏒᎾᏍᏗ ᎠᏑᏰᏍᏗ ᎾᏍᎩ ᎯᎠ ᎦᏩᏒᎬ ᏥᏄᏍᏗ ᎪᏪᎶᏗ. ᎯᎠ ᎠᏍᎪᎵ ᎾᏍᎩ ᎾᏍᏇ ᎤᎭ ᏔᎵ ᎤᎳᏂᎩᏓ ᏗᏓᏇᏄᎩᏍᏗ, ᎯᎠ [[Mandible (insect)|ᎠᎵᏍᏓᏴᏗ]], ᎦᏙ ᎤᏍᏗ ᎬᏔᏅᎯ ᎠᏫᏛᏗ ᎠᎵᏍᏓᏴᏗ, ᎠᏍᎪᏍᏗ, ᎠᎴ ᎠᏥᏍᏕᎵ. ᏀᎾᎢ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎤᏍᏗ ᎠᏜᏩᏛ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎣᎵ ᎭᏢᏃ ᏙᏒᏓᎵ ᏰᎵᏇ ᎠᏓᎾᏅ ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᏓᏁᏗ ᎠᏂᏐᎢ ᎭᏫᎾᏗᏢ ᎤᏚᎳᏗ.
 
 ᎯᎠ [[thorax]] ᎯᎠ ᏙᏒᏓᎵ ᎨᏒᎢ ᎭᏢᏃ ᏂᎦᏛ ᏑᏓᎵ [[arthropod leg|ᏗᏂᏅᏍᎨᏂ]] ᎠᏠᏯᏍᏔᏅ. ᎾᎾᎢ ᎯᎠ ᎤᎵᏍᏛ ᎠᏂᏏᏴᏫᎭ ᎦᏅᏍᎨᏂ ᎨᏒᎢ ᎪᏍᏓᏯ [[claw #Arthropods|ᎠᎩᏍᎬᎢ]] Ꮎ ᏧᎾᎵᏍᏕᎸᏗ ᏙᏒᏓᎵ ᎦᎴᎬ ᎠᎴ ᎦᏛᏗ onto ᏧᏓᎴᏅᏓ. ᎤᎪᏗᏗ [[Queen (insect)|ᎤᎬᏫᏳ ᎠᏂᏁᎳ]] ᎠᎴ ᎠᏍᎦᏯ ᏙᏒᏓᎵ ᎤᎭ [[insect wing|ᎪᏯᏛ]], ᎦᏙ ᎤᏍᏗ ᎤᏅᏌ ᎪᎭᏍᎬ ᎤᎶᏐᏅ ᎯᎠ [[nuptial flight|ᏨᏓᏓᏨᏍᏙᏗ ᎤᎳᏫᏛᏓ]]; ᏱᏂᎬᏛᎾ ᎪᏯᏛ ᎦᏲᎵᎨ ᎤᎬᏫᏳ ᎠᏂᏁᎳ (ergatoids) ᎠᎴ ᎠᏍᎦᏯ ᏰᎵᏇ ᏄᎵᏍᏔᏅ.
 
@@ -73,7 +73,7 @@
 == ᎤᎾᏙᏢᎯ ==
 ᏙᏒᏓᎵ ᎤᎾᏛᏁᎸᏗ ᎠᏯᏖᎾ ᎠᏍᏓᏅᏅ ᎤᎾᏙᏢᎯ ᏧᎾᏓᎴᎿᎢ ᎠᏰᎵ ᎯᎠ ᏩᏗᏅᏗ. ᏀᎢᏳᎢ ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᎾᏍᎩ ᎯᎠ ᏧᎾᏓᎴᎿᎢ ᎤᏍᏗ, ᎤᏅᏌ ᎡᏆ ᎭᏫᎾᏗᏢ ᎠᏂᏐᎢ. ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᏙᏒᏓᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏀᎾᎢ ᏰᎵᏇ ᎾᏍᏋ ᎯᎸᏍᎩ ᏂᎬᎢ soi ᎭᏫᏂᏗᏢ ᎯᎠ ᏧᎸᏫᏍᏓᏁᎯ ᏩᏗᏅᏗ.<ref>Wilson, E O (1953) ᎯᎠ ᎠᏓᎴᏂᏍᎬ ᎠᎴ ᎠᏓᎴᏂᏍᎬ ᎤᎾᏙᏢᎯ ᎭᏫᎾᏗᏢ ᏙᏒᏓᎵ. ᎩᏄᏙᏗ ᏅᎬᎪᏙᏗ ᎤᎾᏙᏢᎯ. 28(2):136-156</ref> ᎯᎠ [[gonad]]ᎭᏫᎾᏗᏢ ᎯᎠ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏯᎾᏛᏁᏗ, ᎠᎴ ᎤᏅᏌ ᎢᏧᎳᎭ ᎤᎳᏂᎩᏗᏳ ᎠᎦᏲᎳᏛᎯ.
 
-ᎢᎦᏛ ᏙᏒᏓᎵ, ᎤᏯᏅᎲ [[honeypot ant|ᏩᏚᎵᏏ ᏧᎳᏍᎩ ᏙᏒᏓᎵ]], ᎤᎭ ᎤᏤᎵᏛ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎤᏯᏅᎲ ''ᎧᎵᏬᎯ'' ᎦᎪ ᏄᏦᏍᏛᎾᏊ ᎠᏓᎾᏅ ᎠᎵᏍᏓᏴᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᏣᏪᏐᎸᏍᏙᏗ ᎯᎠ ᎤᎾᏓᏡᎩ ᎢᏳᎾᏓᎵ, ᏂᎦᎥᏊ ᏗᎾᏙᎳᎩ sgv ᎬᏙᏗ ᏰᎵ ᎡᏆᏯ ᎠᏔᏃᎯᏍᏙᏗ ᎤᏍᏉᎵ. ᎭᏫᎾᏗᏢ ᎤᏗᎴᎩ, ᎤᎧᏲᏗ ᏚᏙᏢᏒᎢ, ᎢᏧᎳᎭ ᎢᎾᎨ, ᎭᏫᎾᏗᏢ [[Africa]], [[North America|ᎤᏴᏢ ᎠᎺᎵᎨ]], ᎠᎴ [[Australia]] ᎭᏢᏃ ᎤᏅᏌ ᎠᎴᏂᏓᏍᏗ, ᎤᏅᏌ ᎠᎦᏎᏍᏔᏅ ᎾᎥᎢ ᎢᎦᏛ ᏴᏫ ᏥᏄᏍᏗ ᎡᏆ ᎤᏓᏂᎳᎯᎨ.
+ᎢᎦᏛ ᏙᏒᏓᎵ, ᎤᏯᏅᎲ [[honeypot ant|ᏩᏚᎵᏏ ᏧᎳᏍᎩ ᏙᏒᏓᎵ]], ᎤᎭ ᎤᏤᎵᏛ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎤᏯᏅᎲ ''ᎧᎵᏬᎯ'' ᎦᎪ ᏄᏦᏍᏛᎾᏊ ᎠᏓᎾᏅ ᎠᎵᏍᏓᏴᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᏣᏪᏐᎸᏍᏙᏗ ᎯᎠ ᎤᎾᏓᏡᎩ ᎢᏳᎾᏓᎵ, ᏂᎦᎥᏊ ᏗᎾᏙᎳᎩ sgv ᎬᏙᏗ ᏰᎵ ᎡᏆᏯ ᎠᏔᏃᎯᏍᏙᏗ ᎤᏍᏉᎵ. ᎭᏫᎾᏗᏢ ᎤᏗᎴᎩ, ᎤᎧᏲᏗ ᏚᏙᏢᏒᎢ, ᎢᏧᎳᎭ ᎢᎾᎨ, ᎭᏫᎾᏗᏢ [[ᎬᎿᎦᏍᏛ]], [[North America|ᏧᏴᏢ ᎠᎹᏰᎵ]], ᎠᎴ ᏒᎳᏗᏝ ᎭᏢᏃ ᎤᏅᏌ ᎠᎴᏂᏓᏍᏗ, ᎤᏅᏌ ᎠᎦᏎᏍᏔᏅ ᎾᎥᎢ ᎢᎦᏛ ᏴᏫ ᏥᏄᏍᏗ ᎡᏆ ᎤᏓᏂᎳᎯᎨ.
 
 == ᎾᏛᏁᎲᎢ ᎠᎴ ᎤᎾᏙᏢᎯ ==
 === ᏗᏛᎪᏔᏅ ===
@@ -91,7 +91,7 @@
 === ᎤᎵᏍᏕᎸᏗ ===
 [[File:WeaverAntDefense.JPG|thumb|250px| [[weaver ant|ᏧᎣᎳ ᏙᏒᏓᎵ]] ᎭᏫᎾᏗᏢ ᏓᎾᎵᎲ ᏀᎾ ᎦᏙᎬ, [[mandible|ᎠᎵᏍᏓᏴᏗ]] ᎠᏯᏖᎾ ᎠᏍᏚᎢᏛ.]] 
 [[File:WeaverAntsAgainstRedAnt.JPG|thumb|250px|ᏧᎣᎳ ᏙᏒᏓᎵ collaborating  ᎨᎳ  ᎩᎦᎨ ᏙᏒᏓᎵ (ᎯᎠ ᏔᎵ ᎾᎾᎢ ᎯᎠ ᎤᎵᏍᏛ  ᎦᎾᏌᏁᏍᎬ ᎯᎠ ᎩᎦᎨ ᏙᏒᏓᎵ, ᏀᎢᏳᎢ ᎯᎠ ᎠᏰᎵ ᏌᏊ ᏗᏰᎳᏍᏗ ᎯᎠ ᎩᎦᎨ ᏙᏒᏓᎵ ᎠᎴᏰᏑ ᎾᏍᎩ ᎠᎨᏴ ᎠᎧᏁᏍᏗ).]]
-ᏙᏒᏓᎵ ᏗᎦᏘᎸᏍᏗ ᎠᎴ ᎠᏥᏍᏕᎵ ᎤᏅᏌ ᎾᎥᎢ ᎤᏍᎦᎶᏨ ᎠᎴ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᎠᏓᏨᏯᏍᎩ, ᎢᏳᏓᎵᎭ ᎠᏓᏞᏗ chemicals ᎾᏍᎩᏯᎢ [[formic acid|formic ᏧᏄᏦᏍᏔ]]. [[Bullet Ants|ᎦᏂ ᏙᏒᏓᎵ]] (ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ''[[Paraponera]]''), ᎤᏂᎷᏨ ᎭᏫᎾᏗᏢ [[Central America|ᎠᏰᎵ]] ᎠᎴ [[South America|ᎤᎦᎾᏭ ᎠᎺᎵᎨ]], ᎠᎦᏎᏍᏔᏅ ᎤᎭ ᎯᎠ ᎤᎪᏗᏗ ᎡᎯᏍᏗ ᎠᏓᏨᏯᏍᎩ ᏄᎾᏛᏅ ᎠᏂᏍᎧᏱ, ᎾᏍᎩ ᎤᏁᎳᎩ ᎾᏍᎩ ᎯᎠ ᎤᏠᏱᎭ ᏗᎵᎪᏔᏅᎯ-ᎤᎲᏲᎵᏍᏗ. ᎤᏅᏌ ᎠᏓᏁᎸ ᎯᎠ ᏩᎦᎸᎳᏗᏴ ᏓᏂᎬᏩᎶᏗᏍᎬ ᏀᎾ ᎯᎠ [[Schmidt Sting Pain Index|Schmidt ᎠᏓᏨᏯᏍᎩ ᎡᎯᏍᏛ ᎠᏩᏛᏗ]]. [[Jack jumper ant|ᏤᎩ ᏗᎵᏔᏕᎩ ᏙᏒᏓᎵ]], (''[[Myrmecia pilosula]]'') ᎤᏂᎷᏨ ᎭᏫᎾᏗᏢ Australia ᎤᎭ ᎠᏓᏨᏯᏍᎩ Ꮎ ᏂᎬᏂᏏᏍᎬ ᎦᎵᏦᎯᏓ ᎤᏍᏗ ᏎᏍᏗ ᏴᏫ ᎭᏫᎾᏗᏢ ᎯᎠ ᎾᏂᎥ ᏴᏫ, ᎠᎴ ᏂᎬᏂᏏᏍᎬ hospitalizations ᎠᏂᏏᏴᏫᎭ ᏑᏕᏘᏴᏓ.
+ᏙᏒᏓᎵ ᏗᎦᏘᎸᏍᏗ ᎠᎴ ᎠᏥᏍᏕᎵ ᎤᏅᏌ ᎾᎥᎢ ᎤᏍᎦᎶᏨ ᎠᎴ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᎠᏓᏨᏯᏍᎩ, ᎢᏳᏓᎵᎭ ᎠᏓᏞᏗ chemicals ᎾᏍᎩᏯᎢ [[formic acid|formic ᏧᏄᏦᏍᏔ]]. [[Bullet Ants|ᎦᏂ ᏙᏒᏓᎵ]] (ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ''[[Paraponera]]''), ᎤᏂᎷᏨ ᎭᏫᎾᏗᏢ [[Central America|ᎠᏰᎵ]] ᎠᎴ [[South America|ᏧᎦᎾᏮ ᎠᎹᏰᎵ]], ᎠᎦᏎᏍᏔᏅ ᎤᎭ ᎯᎠ ᎤᎪᏗᏗ ᎡᎯᏍᏗ ᎠᏓᏨᏯᏍᎩ ᏄᎾᏛᏅ ᎠᏂᏍᎧᏱ, ᎾᏍᎩ ᎤᏁᎳᎩ ᎾᏍᎩ ᎯᎠ ᎤᏠᏱᎭ ᏗᎵᎪᏔᏅᎯ-ᎤᎲᏲᎵᏍᏗ. ᎤᏅᏌ ᎠᏓᏁᎸ ᎯᎠ ᏩᎦᎸᎳᏗᏴ ᏓᏂᎬᏩᎶᏗᏍᎬ ᏀᎾ ᎯᎠ [[Schmidt Sting Pain Index|Schmidt ᎠᏓᏨᏯᏍᎩ ᎡᎯᏍᏛ ᎠᏩᏛᏗ]]. [[Jack jumper ant|ᏤᎩ ᏗᎵᏔᏕᎩ ᏙᏒᏓᎵ]], (''[[Myrmecia pilosula]]'') ᎤᏂᎷᏨ ᎭᏫᎾᏗᏢ Australia ᎤᎭ ᎠᏓᏨᏯᏍᎩ Ꮎ ᏂᎬᏂᏏᏍᎬ ᎦᎵᏦᎯᏓ ᎤᏍᏗ ᏎᏍᏗ ᏴᏫ ᎭᏫᎾᏗᏢ ᎯᎠ ᎾᏂᎥ ᏴᏫ, ᎠᎴ ᏂᎬᏂᏏᏍᎬ hospitalizations ᎠᏂᏏᏴᏫᎭ ᏑᏕᏘᏴᏓ.
 
 [[Fire ant|ᎠᏥᎸ ᏙᏒᏓᎵ]](''[[Solenopsis]] spp.'') ᎤᏠᏱ ᎭᏫᎾᏗᏢ ᎤᎲᎢ ᎠᏓᎯᎯ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎢᎦᎢ ᏕᎨᏒᎢ [[piperidine]] alkaloids.<ref>Obin, M.., ᎠᎴ R.K. Vander ᎠᏴ. 1985. Gaster ᎦᏓᏘ ᎾᎥᎢ ᎠᏥᎸ ᏙᏒᏓᎵ (''Solenopsis spp.''): ᎤᏯᎾᏛᏁᏗ ᎦᏛᎬᎢ ᏄᏓᏅᏘᏴ ᎧᏁᏉᎩ ᎾᏛᏁᎲᎢ. J. Chemical ᎤᎾᏙᏢᎯ. 11:1757-1768.</ref>
 
@@ -104,7 +104,7 @@
 ᏀᎢᏳᎢ ᎢᎦᏛ ᏙᏒᏓᎵ ᎤᏙᏢᏒ ᏂᎦᏛ ᎤᏁᏍᎩᎸᏒ ᎠᎴ ᎧᏅᏑᎸ, ᏐᎢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ nomadic ᎠᎴ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏓᏁᎸ ᎠᏁᏍᎬᏗ ᏂᎪᎯᎸ ᎠᏛᎯᏍᏙᏗ. ᎢᎦᏛ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎤᏙᏢᏒ ᎠᏍᏛᎩ ᎤᏁᏍᎩᎸᏒ, ᏀᎢᏳᎢ ᎠᏂᏐᎢ ᎠᏓᏁᎸ ᎠᏁᏍᎬᏗ ᎤᏁᏍᎩᎸᏒ ᏀᎾ ᏕᏡᎬ. ᎯᎠ ᏭᏚᎸᏛ ᏗᎬᏙᏗ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ ᎠᏁᏍᎨᎲ ᎠᏠᏯᏍᏛ ᎦᏙᎯ ᎠᎴ ᎦᎪᏘ ᎢᏳᏍᏗ ᏯᏛᎿ.
 
 [[File:WeaverAntNest.JPG|thumb|250px|ᎤᎦᎶᎬ ᎤᏁᏍᎩᎸᏒ  [[weaver ants|ᏧᎣᎳ ᏙᏒᏓᎵ]]. [[Pamalican]], [[Philippines]].]]
-ᎢᎦᏛ ᎯᎠ ᎤᏟ ᎢᎦᎢ ᎠᏓᏌᎳᏙᏗ ᏙᏒᏓᎵ ᎯᎠ [[army ant|ᎠᏂᏯᏫᏍᎩ ᏙᏒᏓᎵ]]ᎠᎴ [[driver ant|ᎠᏱᎴᎦ ᏙᏒᏓᎵ]], ᏂᏛᎴᏅᏓ [[South America|ᎤᎦᎾᏭ ᎠᎺᎵᎨ]] ᎠᎴ [[Africa]] ᎨᏥᎸᏉᏗᏳ. ᎾᏍᎩᏯᎢ ᎤᎪᏗᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎦᏙ ᎤᏍᏗ ᎤᎭ ᏂᎪᎯᎸ ᎤᏁᏍᎩᎸᏒ, ᎠᏂᏯᏫᏍᎩ ᎠᎴ ᎠᏱᎴᎦ ᏙᏒᏓᎵ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏙᏢᏒ ᏂᎪᎯᎸ ᎤᏁᏍᎩᎸᏒ, ᎠᎴ ᎾᏍᎩᏍᎩᏂ ᏂᎨᏒᎾ ᎠᏓᏁᏟᏴᏍᏗᎭ ᎠᏰᎵ nomadic ᎦᏬᏂᎯᏍᏗ ᎠᏲᏓᏜᎥ ᎠᎴ ᎦᏬᏂᎯᏍᏗ ᎠᏲᏓᏜᎥ ᎭᏢᏃ ᎯᎠ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎤᏙᏢᏒ ᎢᎬᏱ ᎨᏰᎯ ᎤᏁᏍᎩᎸᏒ ([[bivouac (ants)|ᎦᎷᎯᏍᏗ]]) ᎠᏥᏄᎪᏫᏍᎬ ᎤᎾᏤᎵ ᎣᏤᎵ ᏗᏂᏰᎸ. ᎨᏥᏅᏏᏓ ᎠᏛᎯᏍᏙᏗ ᎢᏳᏍᏗᏊ ᏗᎬᏩᎶᏒ ᏨᏓᏓᏨᏍᏙᏗ ᎤᎳᏫᏛᏓ ᏥᏄᏍᏗ ᏄᏍᏛ ᎧᏃᎮᎸ ᎦᎸᎳᏗᏢ, ᎠᎴ ᎾᎥᎢ ᏧᏠᎯᏍᏗ, ᎭᏢᏃ ᎤᎾᏓᏟᏌᎲ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏄᏦᏍᏛᎾᏊ ᎠᏍᎪᏍᏗ ᎢᏤ ᎠᏔᎴᏒ ᎠᎴ ᎠᏛᎯᏍᏙᏗ ᎢᏤ ᎤᎬᏫᏳ ᎠᏂᏁᎳ. ᎤᎾᏓᏡᎩ ᎢᏳᎾᏓᎵ ᎠᏁᎳ ᎠᏥᎸᏉᏗ ᎾᎥᎢ ᎦᏩᏒᎬ, ᎠᎴ ᏐᎢ ᏗᎧᏃᏗ ᎤᏠᏱᎭ ᏗᎦᏘᎸᏍᏗ.
+ᎢᎦᏛ ᎯᎠ ᎤᏟ ᎢᎦᎢ ᎠᏓᏌᎳᏙᏗ ᏙᏒᏓᎵ ᎯᎠ [[army ant|ᎠᏂᏯᏫᏍᎩ ᏙᏒᏓᎵ]]ᎠᎴ [[driver ant|ᎠᏱᎴᎦ ᏙᏒᏓᎵ]], ᏂᏛᎴᏅᏓ ᏧᎦᎾᏮ ᎠᎹᏰᎵ ᎠᎴ [[ᎬᎿᎦᏍᏛ]] ᎨᏥᎸᏉᏗᏳ. ᎾᏍᎩᏯᎢ ᎤᎪᏗᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎦᏙ ᎤᏍᏗ ᎤᎭ ᏂᎪᎯᎸ ᎤᏁᏍᎩᎸᏒ, ᎠᏂᏯᏫᏍᎩ ᎠᎴ ᎠᏱᎴᎦ ᏙᏒᏓᎵ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏙᏢᏒ ᏂᎪᎯᎸ ᎤᏁᏍᎩᎸᏒ, ᎠᎴ ᎾᏍᎩᏍᎩᏂ ᏂᎨᏒᎾ ᎠᏓᏁᏟᏴᏍᏗᎭ ᎠᏰᎵ nomadic ᎦᏬᏂᎯᏍᏗ ᎠᏲᏓᏜᎥ ᎠᎴ ᎦᏬᏂᎯᏍᏗ ᎠᏲᏓᏜᎥ ᎭᏢᏃ ᎯᎠ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎤᏙᏢᏒ ᎢᎬᏱ ᎨᏰᎯ ᎤᏁᏍᎩᎸᏒ ([[bivouac (ants)|ᎦᎷᎯᏍᏗ]]) ᎠᏥᏄᎪᏫᏍᎬ ᎤᎾᏤᎵ ᎣᏤᎵ ᏗᏂᏰᎸ. ᎨᏥᏅᏏᏓ ᎠᏛᎯᏍᏙᏗ ᎢᏳᏍᏗᏊ ᏗᎬᏩᎶᏒ ᏨᏓᏓᏨᏍᏙᏗ ᎤᎳᏫᏛᏓ ᏥᏄᏍᏗ ᏄᏍᏛ ᎧᏃᎮᎸ ᎦᎸᎳᏗᏢ, ᎠᎴ ᎾᎥᎢ ᏧᏠᎯᏍᏗ, ᎭᏢᏃ ᎤᎾᏓᏟᏌᎲ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏄᏦᏍᏛᎾᏊ ᎠᏍᎪᏍᏗ ᎢᏤ ᎠᏔᎴᏒ ᎠᎴ ᎠᏛᎯᏍᏙᏗ ᎢᏤ ᎤᎬᏫᏳ ᎠᏂᏁᎳ. ᎤᎾᏓᏡᎩ ᎢᏳᎾᏓᎵ ᎠᏁᎳ ᎠᏥᎸᏉᏗ ᎾᎥᎢ ᎦᏩᏒᎬ, ᎠᎴ ᏐᎢ ᏗᎧᏃᏗ ᎤᏠᏱᎭ ᏗᎦᏘᎸᏍᏗ.
 
 [[Weaver ant|ᏧᎣᎳ ᏙᏒᏓᎵ]](''[[Oecophylla]]'') ᎠᏓᏁᎸ ᎠᏁᏍᎬᏗ ᎤᏁᏍᎩᎸᏒ ᎭᏫᎾᏗᏢ ᏕᏡᎬ ᎾᎥᎢ ᎠᏓᏂᏴᎡᎲ ᏧᎦᎶᎦ ᎢᏧᎳ, ᎢᎬᏱ ᎦᎾᏌᏁᏍᎬ ᎠᏂ ᎢᏧᎳ ᎬᏙᏗ ᎠᏒᏢᎢ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎠᎴ ᏀᎢᏳᎢ ᎠᏂᏰᏩᏒᏍᎬ ᎠᏂ ᎢᏧᎳ ᎾᎥᎢ ᏗᏂᎴᏱᏗᏍᎩ ᏏᎵᎩ-ᎠᏛᎯᏍᏗᏍᎬ larvae ᏗᎦᏘᎴᎩ ᎠᏂ ᎭᏫᎾᏗᏢ ᎠᏓᏁᏟᏴᏍᏗᎭ.
 
@@ -153,7 +153,6 @@
 [[Aphid|ᎭᏫᏂ]]ᎠᏓᏄᎪᏫᏍᏗ ᎤᎦᎾᏍᏛ ᎦᎾ ᎤᏯᏅᎲ [[Honeydew (secretion)|ᏩᏚᎵᏏ ᎤᎯᏌᏛ]]. ᎯᎠ ᎧᎵᏎᏥ ᎠᏓᏁᎳᏁᏗ ᎦᎸᎳᏗ-ᏄᎵᏂᎬᎬ ᎠᎵᏍᏓᏴᏗ ᏗᏓᎴᎲᏍᎬ, ᎦᏙ ᎤᏍᏗ ᎤᎪᏗᏗ ᏙᏒᏓᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎬᏙᏗ. ᎢᏚᏳᎪᏛ ᎪᎯ ᎨᏒᎢ ᎠᎵᏍᎪᎸᏙᏗ ᎤᎶᏒᎩ ᎯᎠ ᎦᏙᎯ, ᎠᎴ ᏴᏩᏚᏫᏛ ᏙᏒᏓᎵ ᎾᏍᎩ ᎨᏒᎢ ᎠᏍᏆᏂᎪᏔᏅ ᎾᏍᎩᎾᎢ ᎠᏂ ᎠᏓᏂᏢᏗ. ᎯᎠ ᏙᏒᏓᎵ ᎭᏫᎾᏗᏢ ᎠᎦᏔᎲᏍᏗ ᎠᏍᏆᏂᎪᏙᏗ predators ᎤᏣᏘᎾ ᎠᎴ ᏫᎵ ᎠᏓᏅᏍᏗ ᎯᎠ ᎭᏫᏂ ᏴᏩᏚᏫᏛ ᎤᏟ ᎢᏲᏍᏛ ᎨᎳᏍᏙᏗ ᎦᎷᎯᏍᏗ. ᎾᏍᎩ ᎠᏓᏅᏍᏗᏱ ᎢᏤ ᎡᏍᎦᏂ, ᎤᎪᏗᏗ ᎨᏥᏅᏏᏓ ᏫᎵ ᎠᎩᏍᏗ ᎢᏤ [[aphid|ᎭᏫᏂ]]ᎬᏙᏗ ᎠᏂ, ᎠᏍᏓᏩᏛᏍᏗ Ꮎ ᎤᏅᏌ ᎤᎭ ᎠᏓᏁᏗ ᏩᏚᎵᏏ ᎤᎯᏌᏛ ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᏤ ᎡᏍᎦᏂ.  ᏙᏒᏓᎵ ᎾᏍᎩ ᎾᏍᏇ ᏍᎪᎯ [[mealybug]]ᎠᏍᏆᏂᎪᏙᏗ ᎠᏫᏒ ᎤᎾᏤᎵ ᏩᏚᎵᏏ ᎤᎯᏌᏛ. ᏃᏯᎠ ᏥᏍᎪᏯ ᏰᎵᏇ ᏗᏙᎳᎩ ᎤᏢᏲᎵᏍᏗ ᎠᏍᎩᎾᏗᏍᏗ ᎠᎵᏍᏓᏴᏗ ᎢᏳᏃ ᏙᏒᏓᎵ ᎡᏙᎠ ᎠᏓᏍᏕᎸᏗ ᏃᏯᎠ ᏥᏍᎪᏯ ᏂᏛᎴᏅᏓ ᏂᎬᏩᏍᏛ ᏗᏂᏓᏄᏫ.<ref>Jahn, G.C. & J.W. ᎠᎠᏄᎸᏒ ᏂᎬᏅ. 1994. ᎡᏆ-ᎠᎴᏅᏗᏍᎬ ᏙᏒᏓᎵ, ''Pheidole megacephala'': ᏓᏓᏁᏤᎸ ᎬᏙᏗ ᎯᎠ ᎤᎾᏙᏢᎯ ᎠᎨᏔᏗᏍᏗ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᎠᎵᏍᏓᏴᏗ ᏃᏯᎠ ᏥᏍᎪᏯ. Pp. 199-205 ᎭᏫᎾᏗᏢ: D.F. ᏫᎵᎭᎹ (ᎦᎾᏄᎪᏫᏒ.) ᏗᎵᎪᏔᏅᎯ ᏙᏒᏓᎵ: ᎤᎾᏙᏢᎯ, ᏓᏓᏛᎾᏍᏗᏍᎬ, ᎠᎴ ᎠᎨᏔᏗᏍᏗ ᎬᏂᎨᏒ ᏄᏩᏁᎸ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ. ᏭᏕᎵᎬ ᏗᎧᏃᏗᎢ ᏗᏂᎴᏱᏗᏍᎩ, ᎦᏌᏆᎸ. 332 pp.</ref><ref>Jahn, G.C. & J.W. ᎠᎠᏄᎸᏒ ᏂᎬᏅ. 1996. ᏄᎵᏍᏔᏅ ''Pheidole megacephala'' (Hymenoptera: Formicidae) ᏀᎾ ᏩᎵᏃᎯᏯᏍᎬ ᎠᎴ ᎧᏁᏉᎩ ''Dysmicoccus neobrevipes'' (Homoptera: Pseudococcidae). J Econ Ent 89:1124-1129.</ref>
 [[File:Ant tending scales3.jpg|thumb|''Camponotus compressus'' ᏫᏚᏳᎪᏛ [[Scale insect|ᏩᏂᎨᎢ ᏗᎦᏛᏗ]]]]
 
-
 [[Myrmecophile|Myrmecophilous]] (ᏙᏒᏓᎵ-ᎠᎨᏳᎯ) [[caterpillar|ᏍᎪᏯ ᎠᏁᏍᎩᎸᎥᏍᎩ]]ᎯᎠ ᏏᏓᏁᎸᎯ [[Lycaenidae]] (e.g., ᏌᎪᏂᎨ, ᎠᏥᏱ, ᎠᎴ hairstreaks) ᎤᏂᎪᏗᏗ ᎦᎾᏝᎢ ᎾᎥᎢ ᎯᎠ ᏙᏒᏓᎵ, ᎤᏗᏅᏒᎩ ᎨᎳᏍᏙᏗ ᎡᏍᎦᏂ ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᎦ, ᎠᎴ ᎠᏲᎸᎯ ᎭᏫᎾᏗᏢ ᎯᎠ ᏙᏒᏓᎵ' ᎤᏁᏍᎩᎸᏒ ᎾᎾᎢ ᏒᏃᏱ. ᎯᎠ ᏍᎪᏯ ᎠᏁᏍᎩᎸᎥᏍᎩ ᎤᎭ gland ᎦᏙ ᎤᏍᏗ ᎤᏕᎵᏓ ᏩᏚᎵᏏ ᎤᎯᏌᏛ ᎯᎳᎪ ᎢᏳ ᎯᎠ ᏙᏒᏓᎵ ᎦᏅᎦᎸᏗ ᎠᏂ. ᎢᎦᏛ ᏍᎪᏯ ᎠᏁᏍᎩᎸᎥᏍᎩ ᎤᎾᏅᏛ ᎠᏛᎯᏍᏙᏗ ᏐᎯ ᎠᎴ ᏚᏃᏴᎬ Ꮎ ᎤᏓᏅᏖᏗ ᎾᎥᎢ ᎯᎠ ᏙᏒᏓᎵ.<ref>DeVries, Philip J. 1992. ᏓᏂᏃᎩᏍᎬ ᏍᎪᏯ ᎠᏁᏍᎩᎸᎥᏍᎩ, ᏙᏒᏓᎵ ᎠᎴ Symbiosis. ᎠᏏᎾᏍᏛ ᏴᏩᏁᎬ  267:76.</ref> ᎢᎦᏛ ᏍᎪᏯ ᎠᏁᏍᎩᎸᎥᏍᎩ ᎤᎭ ᎦᏇᏅᏗ ᏂᏛᎴᏅᏓ ᎠᎴᏂᏙᎲ ᏙᏒᏓᎵ-ᎠᎨᏳᎯ ᏙᏒᏓᎵ-ᎠᎵᏍᏓᏴᎲᏍᎬ ᎠᎴ ᎾᏍᎩ ᎯᎠ [[myrmecophagous]] ᏍᎪᏯ ᎠᏁᏍᎩᎸᎥᏍᎩ ᎠᏓᏄᎪᏫᏍᏗ pheromone ᎦᏙ ᎤᏍᏗ ᏗᎪᏢᏅ ᎯᎠ ᏙᏒᏓᎵ ᎠᏓᏅᏖᏍᎬ Ꮎ ᎯᎠ ᏍᎪᏯ ᎠᏁᏍᎩᎸᎥᏍᎩ ᎤᏤᎵ ᎠᏲᎵ ᎨᏒᎢ ᏌᏊ ᎤᎾᏤᎵ ᎣᏤᎵ. ᎯᎠ ᎠᏲᎵ ᏫᎵ ᏀᎢᏳᎢ ᎾᏍᏋ ᎠᎩᏒᎯ ᎾᏀᎢ ᎯᎠ ᏙᏒᏓᎵ' ᎤᏁᏍᎩᎸᏒ ᎭᏢᏃ ᎾᏍᎩ ᏰᎵᏇ ᎨᎳᏍᏙᏗ ᏀᎾ ᎯᎠ ᏙᏒᏓᎵ larvae.
 
 [[Fungus-growing ants|ᎠᏎᎸᎯ-ᎠᏛᏏᏒ ᏙᏒᏓᎵ]] Ꮎ ᎪᏢᏗ ᎦᎸᎳᏗᏢ ᎯᎠ ᎠᏂᎳᏍᏓᎸ [[attini]], ᎠᏠᏯᏍᏗᏍᎩ [[Leafcutter ant|ᎤᎦᎶᎬ ᎪᏍᏓᏯ ᏙᏒᏓᎵ]], ᎢᏯᏛᏁᎯ ᎦᏚᎷᎪᏗ ᎤᏙᎯᏳ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᏎᎸᎯ ᎭᏫᎾᏗᏢ ᎯᎠ ''[[Leucoagaricus]]'' ᎠᎴ ''[[Leucocoprinus]]'' genera ᎯᎠ [[Agaricaceae]] ᏏᏓᏁᎸᎯ. ᎭᏫᎾᏗᏢ ᎪᎯ [[ant-fungus mutualism|ᏙᏒᏓᎵ-ᎠᏎᎸᎯ ᎠᏂᏔᎵ ᎾᎾᏛᏁᎲ]], ᎢᏧᎳ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᎵᏍᎦᏍᏙᏗ ᏀᎾ ᎠᏂᏏᏴᏫᎭ ᏐᎢ ᎾᏍᎩᎾᎢ ᏩᎵᏃᎯᏯᏍᎬ. ''[[Allomerus decemarticulatus]]'' ᎤᎭ ᎦᏇᏅᏗ ᏦᎢᏁ ᎤᎾᎵᎪᏒ ᎬᏙᏗ ᎤᎾᏤᎵ ᎠᏓᏩᏛᎯᏙᎯ ᎦᎪᏘ ''[[Hirtella physophora]]'' (Chrysobalanaceae), ᎠᎴ ᎠᏎᎸᎯ ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᎠᏓᎭᎷᏗ ᎠᎴ ᎣᏤᎵ ᎢᎬᏁᎯ ᎦᏯᎸᎩ ᎠᏓᏍᏕᎸᏗ ᏂᏛᎴᏅᏓ ᎠᎵᏍᏓᏴᏗ ᎠᏂᏍᎧᏱ.<ref>Dejean, Alain, Pascal Jean Solano,Julien Ayroles, Bruno Corbara, Jérôme Orivel (2005)Arboreal ᏙᏒᏓᎵ ᎠᏓᏁᎸ ᎠᏁᏍᎬᏗ ᏌᏛᏗ ᎠᏥᏂᏱᏍᎬ ᎠᎵᏍᏓᏴᏗ. ᎤᏁᎳᏅ ᎤᏬᏢᏅ. 434:973</ref>
@@ -173,17 +172,17 @@
 
 ᎢᎦᏛ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᎤᏯᏅᎲ ''[[killer ant|ᏗᎯ ᏙᏒᏓᎵ]]'', ᎤᎭ ᏫᏚᏳᎪᏛ ᏗᎦᏘᎸᏍᏗ ᎤᏣᏘ ᎡᏆᎯᎨᏍᏙᏗ ᎡᎿᎢ ᎡᎥ ᏀᎢᏳᎨᏒ ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎭᏫᎾᏗᏢ ᎠᏥᏍᏕᎵ ᎤᎾᏤᎵ ᎤᏁᏍᎩᎸᏒ. ᏴᏫ ᏗᎦᏘᎸᏍᏗ ᎢᏳᏓᎵᎭ, ᎠᎴ ᎯᎠ ᎠᏓᏨᏯᏍᎩ ᎠᎴ ᎤᏍᎦᎶᏨ ᏰᎵᏇ ᎾᏍᏋ ᎾᎥᏂᎨᏍᏙᏗ ᎡᎯᏍᏗ ᎠᎴ ᎭᏫᎾᏗᏢ ᎡᏆ ᏰᎵᏊ ᏗᏎᏍᏗ ᏰᎵᏇ ᎾᏍᏋ ᏰᎵᏆ ᎢᏯᏛᏁᏗ.
 
-ᎯᎠ [[Masai]] Africa ᎠᏰᎲ ᎠᎾᏓᎦᏘᏴ ᎪᎯᏳᎯ ᎾᏍᎩᎾᎢ ᎯᎠ [[Siafu|Siafu ᏙᏒᏓᎵ]], ᎤᏚᎳᏗ predators Ꮎ ᎤᏲᏨᎯ ᎡᏆ ᎢᎦᎢ ᎨᏒ ᎠᏂᏍᎧᏱ ᎠᎴ ᎤᎵᎮᎵᏍᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᎤᎵᏍᏕᎸᏙᏗ ᎤᏅᏌ ᎠᏲᎯᏍᏗ ᏗᏂᎶᎩᏍᎩ, ᏥᏄᏍᏗ ᎤᏅᏌ ᏫᎵ ᎪᏣᎴᏍᏗᏱ ᏂᎦᏛ ᎠᏍᎩᎾᏗᏍᏗ ᏂᏛᎴᏅᏓ ᏠᎨᏏ ᎠᏫᏒ ᎠᎴ ᏄᎵᏍᏛ ᎠᏓᏅᏍᏗ ᏀᎾ.
+ᎯᎠ [[Masai]] ᎬᎿᎦᏍᏛ ᎠᏰᎲ ᎠᎾᏓᎦᏘᏴ ᎪᎯᏳᎯ ᎾᏍᎩᎾᎢ ᎯᎠ [[Siafu|Siafu ᏙᏒᏓᎵ]], ᎤᏚᎳᏗ predators Ꮎ ᎤᏲᏨᎯ ᎡᏆ ᎢᎦᎢ ᎨᏒ ᎠᏂᏍᎧᏱ ᎠᎴ ᎤᎵᎮᎵᏍᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᎤᎵᏍᏕᎸᏙᏗ ᎤᏅᏌ ᎠᏲᎯᏍᏗ ᏗᏂᎶᎩᏍᎩ, ᏥᏄᏍᏗ ᎤᏅᏌ ᏫᎵ ᎪᏣᎴᏍᏗᏱ ᏂᎦᏛ ᎠᏍᎩᎾᏗᏍᏗ ᏂᏛᎴᏅᏓ ᏠᎨᏏ ᎠᏫᏒ ᎠᎴ ᏄᎵᏍᏛ ᎠᏓᏅᏍᏗ ᏀᎾ.
 
 ==== ᏙᏒᏓᎵ ᎠᎵᏍᏓᏴᎲᏍᎬ ====
 {{main|Entomophagy}}
 ᏙᏒᏓᎵ ᎠᎴ ᎤᎾᏤᎵ larvae ᎦᏓᎭ ᎭᏫᎾᏗᏢ ᏄᏓᎴᎿᎥ ᎢᎦᏛᎭ ᎯᎠ ᎡᎶᎯ.
-ᎭᏫᎾᏗᏢ [[ᏧᏴᏢ ᎠᎹᏰᎵ]], larvae ''ᎠᎵᏍᏓᏴᏗ ᎦᏃᎸᎥᏍᎬ'' ᏙᏒᏓᎵ, ᎤᎾᏅᏛ ᏀᎾ ᎢᏴ ᏥᏄᏍᏗ ''[[ants that eat|ᏙᏒᏓᎵ Ꮎ ᎠᎩᏍᏗ]]'' ᎠᎦᏎᏍᏔᏅ ᎡᏆ ᎤᏓᏂᎳᎯᎨ. ᎭᏫᎾᏗᏢ ᎯᎠ [[Colombia]]n ᏗᎦᎸᏫᏍᏓᏁᏗ [[Santander Department|Santander]] Hormigas Culodnas (ᎠᏨᏍᏓᏗ. : "ᎦᎵᏦᎯᏓ ᏥᏄᏍᏗ ᏙᏒᏓᎵ") ''[[Atta laevigata]]'' ᎦᎴᏴᏔᏅ ᎬᏃᏛ ᎠᎴ ᎦᏓᎭ. ᎪᎯ ᎧᏃᎮᎸᎯ ᎤᎭ ᎦᎷᏨ ᎡᎳᏗ ᏂᏛᎴᏅᏓ ᎯᎠ ᎾᏰᎯᏯ [[Guanes]]. ᎭᏫᎾᏗᏢ ᎢᎦᏛᎭ [[Thailand]], ᏙᏒᏓᎵ ᎠᏛᏅᎢᏍᏔᏃᏅᎯ ᎠᎴ ᎦᏓᎭ ᎭᏫᎾᏗᏢ ᏧᏓᎴᏅᏓ ᏫᎦᎶᎯᏍᏗ. [[Khorat]] ᏙᏒᏓᎵ ᏧᏪᏥ ᎠᎴ ᎤᏝᏅᏓᏕᎲ ᎦᏃᎯᎸᏒ ᏙᏒᏓᎵ ᎦᏓᎭ ᏥᏄᏍᏗ [[Hors d'œuvre|ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ]]. ᏧᎣᎳ ᏙᏒᏓᎵ ᏧᏪᏥ ᎠᎴ ᎠᏲᎵ ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎯᎠ ᏙᏒᏓᎵ ᎤᏅᏌ ᎠᏎᏱᎩ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ Thai ᎠᎬᎭᎷᏴ ᎠᎩᏍᏗ, Yum (ยำ), ᎭᏫᎾᏗᏢ ᎤᏲᏨᎯ ᎤᏯᏅᎲ Yum Khai Mod Daeng (ยำไข่มดแดง) ᎠᎴ ᎩᎦᎨ ᏙᏒᏓᎵ ᎤᏪᏥ ᎠᎬᎭᎷᏴ ᎠᎩᏍᏗ, ᎤᏲᏨᎯ Ꮎ ᎦᎷᎦ ᏂᏛᎴᏅᏓ ᎯᎠ Issan ᎠᎴ ᎤᏴᏢ-ᎧᎸᎬᎢᏗᏢ ᎤᏔᏂᏗ ᎦᏙᎯ Thailand. ᎭᏫᎾᏗᏢ [[South Africa|ᎤᎦᎾᏭ Africa]], ᏙᏒᏓᎵ ᎬᏔᏅᎯ ᎠᎵᏍᏕᎸᏗ ᎭᏫᎾᏗᏢ [[Rooibos]] (''Aspalathus linearis'') ᎦᏚᎷᎪᏗ: ᎤᏅᏌ ᎠᏓᏂᏢᏗ ᎯᎠ ᎦᎪᏘ ᎤᏤᎵ ᎤᎦᏔ ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᏀᎢᏳᎢ ᎾᏍᏋ ᎠᎢᏗᎨᎢ ᎠᏍᏆᏂᎪᏙᏗ ᎠᏫᏒ ᎾᎥᎢ ᎦᎪᏘ.
+ᎭᏫᎾᏗᏢ [[ᏧᏴᏢ ᎠᎹᏰᎵ]], larvae ''ᎠᎵᏍᏓᏴᏗ ᎦᏃᎸᎥᏍᎬ'' ᏙᏒᏓᎵ, ᎤᎾᏅᏛ ᏀᎾ ᎢᏴ ᏥᏄᏍᏗ ''[[ants that eat|ᏙᏒᏓᎵ Ꮎ ᎠᎩᏍᏗ]]'' ᎠᎦᏎᏍᏔᏅ ᎡᏆ ᎤᏓᏂᎳᎯᎨ. ᎭᏫᎾᏗᏢ ᎯᎠ [[Colombia]]n ᏗᎦᎸᏫᏍᏓᏁᏗ [[Santander Department|Santander]] Hormigas Culodnas (ᎠᏨᏍᏓᏗ. : "ᎦᎵᏦᎯᏓ ᏥᏄᏍᏗ ᏙᏒᏓᎵ") ''[[Atta laevigata]]'' ᎦᎴᏴᏔᏅ ᎬᏃᏛ ᎠᎴ ᎦᏓᎭ. ᎪᎯ ᎧᏃᎮᎸᎯ ᎤᎭ ᎦᎷᏨ ᎡᎳᏗ ᏂᏛᎴᏅᏓ ᎯᎠ ᎾᏰᎯᏯ [[Guanes]]. ᎭᏫᎾᏗᏢ ᎢᎦᏛᎭ [[Thailand]], ᏙᏒᏓᎵ ᎠᏛᏅᎢᏍᏔᏃᏅᎯ ᎠᎴ ᎦᏓᎭ ᎭᏫᎾᏗᏢ ᏧᏓᎴᏅᏓ ᏫᎦᎶᎯᏍᏗ. [[Khorat]] ᏙᏒᏓᎵ ᏧᏪᏥ ᎠᎴ ᎤᏝᏅᏓᏕᎲ ᎦᏃᎯᎸᏒ ᏙᏒᏓᎵ ᎦᏓᎭ ᏥᏄᏍᏗ [[Hors d'œuvre|ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ]]. ᏧᎣᎳ ᏙᏒᏓᎵ ᏧᏪᏥ ᎠᎴ ᎠᏲᎵ ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎯᎠ ᏙᏒᏓᎵ ᎤᏅᏌ ᎠᏎᏱᎩ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ Thai ᎠᎬᎭᎷᏴ ᎠᎩᏍᏗ, Yum (ยำ), ᎭᏫᎾᏗᏢ ᎤᏲᏨᎯ ᎤᏯᏅᎲ Yum Khai Mod Daeng (ยำไข่มดแดง) ᎠᎴ ᎩᎦᎨ ᏙᏒᏓᎵ ᎤᏪᏥ ᎠᎬᎭᎷᏴ ᎠᎩᏍᏗ, ᎤᏲᏨᎯ Ꮎ ᎦᎷᎦ ᏂᏛᎴᏅᏓ ᎯᎠ Issan ᎠᎴ ᎤᏴᏢ-ᎧᎸᎬᎢᏗᏢ ᎤᏔᏂᏗ ᎦᏙᎯ Thailand. ᎭᏫᎾᏗᏢ [[South Africa|ᏧᎦᎾᏮ ᎬᎿᎦᏍᏛ]], ᏙᏒᏓᎵ ᎬᏔᏅᎯ ᎠᎵᏍᏕᎸᏗ ᎭᏫᎾᏗᏢ [[Rooibos]] (''Aspalathus linearis'') ᎦᏚᎷᎪᏗ: ᎤᏅᏌ ᎠᏓᏂᏢᏗ ᎯᎠ ᎦᎪᏘ ᎤᏤᎵ ᎤᎦᏔ ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᏀᎢᏳᎢ ᎾᏍᏋ ᎠᎢᏗᎨᎢ ᎠᏍᏆᏂᎪᏙᏗ ᎠᏫᏒ ᎾᎥᎢ ᎦᎪᏘ.
 
-[[Charles Thomas Bingham|ᏣᎵ ᏙᎹᏏ ᎾᏍᏋ ᎦᏁᎸ]] ᏓᏓᏚᎬ ᎪᏪᎵ Ꮎ ᎭᏫᎾᏗᏢ ᎢᎦᏛᎭ [[India|ᏗᏓᏁᏍᎩ]], ᎠᎴ ᏂᎦᏅᎯᏒ [[Burma]] ᎠᎴ [[Siam]], ᎦᏯᎸᏗ ᎯᎠ ᎢᏤ ᎢᏳᏍᏗ ᏧᎣᎳ ᏙᏒᏓᎵ (''[[Oecophylla smaragdina]]'') ᎨᏒᎢ ᎢᏯᏓᏛᏁᎸ ᏥᏄᏍᏗ ᏄᎵᏂᎬᎬ ᎬᏙᏗ [[curry|ᎦᏅᎵᏰᏗ]]. [[Saville Kent]], ᎭᏫᎾᏗᏢ ᎯᎠ ''[[Naturalist in Australia|ᏂᎬᏩᏍᏛ ᎭᏫᎾᏗᏢ Australia]]'' ᎤᏬᏪᎳᏅ
+[[Charles Thomas Bingham|ᏣᎵ ᏙᎹᏏ ᎾᏍᏋ ᎦᏁᎸ]] ᏓᏓᏚᎬ ᎪᏪᎵ Ꮎ ᎭᏫᎾᏗᏢ ᎢᎦᏛᎭ [[India|ᏗᏓᏁᏍᎩ]], ᎠᎴ ᏂᎦᏅᎯᏒ [[Burma]] ᎠᎴ [[Siam]], ᎦᏯᎸᏗ ᎯᎠ ᎢᏤ ᎢᏳᏍᏗ ᏧᎣᎳ ᏙᏒᏓᎵ (''[[Oecophylla smaragdina]]'') ᎨᏒᎢ ᎢᏯᏓᏛᏁᎸ ᏥᏄᏍᏗ ᏄᎵᏂᎬᎬ ᎬᏙᏗ [[curry|ᎦᏅᎵᏰᏗ]]. [[Saville Kent]], ᎭᏫᎾᏗᏢ ᎯᎠ ''[[Naturalist in Australia|ᏂᎬᏩᏍᏛ ᎭᏫᎾᏗᏢ ᏒᎳᏗᏝ]]'' ᎤᏬᏪᎳᏅ
 “Beauty, ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᎸᏛ ᎧᏁᏌᎢ ᎯᎠ ᎢᏤ ᎢᏳᏍᏗ ᏙᏒᏓᎵ, ᎨᏒᎢ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ ᎦᏁᎦ-ᎠᏍᏛᎩ. ᎤᎾᏤᎵ ᎤᎵᎶᎯ, ᎾᎥᏂᎨᏍᏗ ᏰᎵ ᎤᎦᎾᏍᏛ-ᎾᏍᎩᏯᎢ ᎠᏓᎨᏗ ᏰᎵᏊ ᏱᎩ ᏄᏍᏛ ᏕᎫᎪᏗᏍᎬ ᎯᎠ ᎢᎬᏱ ᎧᏃᎮᏍᎩ ᎾᎾᎢ ᎤᎾᏤᎵ ᎤᏲᏨᎯ ᎾᎥᎢ ᎯᎠ ᏴᏫ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ.” ᎠᏍᏙᎥᎯ ᎦᎸᎳᏗᏢ ᎭᏫᎾᏗᏢ ᎠᎹ, ᎤᎶᏐᏅ ᎯᎠ ᏄᏍᏛᎢ ᎴᎹᏂ ᏍᏆᏏ, “these ᏙᏒᏓᎵ ᎤᏙᏢᏒ ᎤᎵᎶᎲᏍᎩ ᏧᏄᏦᏍᏔ ᎠᏗᏔᏍᏗ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎠᏰᎲᎩ ᎭᏫᎾᏗᏢ ᎦᎸᎳᏗ ᎠᏑᏰᏍᏗ ᎾᎥᎢ ᎯᎠ ᎾᏰᎯᏯ ᎤᏴᏢ ᎤᎬᏫᏳ ᎠᏂᏁᎳ ᎦᏙᎯ, ᎠᎴ ᎨᏒᎢ ᎢᏧᎳᎭ ᎤᏓᎵᎮᎵᏤᎸ ᎾᎥᎢ ᎤᎪᏗᏗ European ᏄᏍᏛ ᎠᎩᏍᏗ.”<ref name="beq">Bequaert, J. 1921 ᎠᏂᏍᎧᏱ ᏥᏄᏍᏗ ᎠᎵᏍᏓᏴᏗ. ᏂᎬᏩᏍᏛ ᎧᏃᎮᏍᎩ [http://www.naturalhistorymag.com/editors_pick/1921_03-04_pick.html]</ref>
 
-[[John Muir|ᏣᏂ Muir]], ᎭᏫᎾᏗᏢ ᎤᏤᎵ ''[[First Summer in the Sierra|ᎢᎬᏱ ᎪᎨᏱ ᎭᏫᎾᏗᏢ ᎯᎠ Sierra]]'' ᏓᏓᏚᎬ ᎪᏪᎵ Ꮎ ᎯᎠ [[Paiute|ᎠᏍᎪᏍᏗ ᏄᏁᎸᎾ ᎠᏂᏴᏫ]] [[California]] ᎤᎬᎩ ᎯᎠ ᎫᎫ ᏧᏄᏦᏍᏔ gasters ᎯᎠ ᎡᏆ ᎤᏪᏴ-ᎬᎿᎨ ᏗᏁᏍᎨᏍᎩ ᏙᏒᏓᎵ. ᎯᎠ Mexican ᎠᏂᏴᏫ ᎠᎩᏍᏗ ᎯᎠ ᎧᎵᏬᎯ ᏗᎦᎸᏫᏍᏓᏁᏗ, ᎠᎴ ᎠᎴᏂᏙᎲ ᏩᏚᎵᏏ-ᏧᎳᏍᎩ, ᎯᎠ ᏩᏚᎵᏏ ᏙᏒᏓᎵ (''Myrmecocystus'').<ref name="beq"/>
+[[John Muir|ᏣᏂ Muir]], ᎭᏫᎾᏗᏢ ᎤᏤᎵ ''[[First Summer in the Sierra|ᎢᎬᏱ ᎪᎨᏱ ᎭᏫᎾᏗᏢ ᎯᎠ Sierra]]'' ᏓᏓᏚᎬ ᎪᏪᎵ Ꮎ ᎯᎠ [[Paiute|ᎠᏍᎪᏍᏗ ᏄᏁᎸᎾ ᎠᏂᏴᏫ]] [[ᎠᏕᎳᏧᏢᎢ]] ᎤᎬᎩ ᎯᎠ ᎫᎫ ᏧᏄᏦᏍᏔ gasters ᎯᎠ ᎡᏆ ᎤᏪᏴ-ᎬᎿᎨ ᏗᏁᏍᎨᏍᎩ ᏙᏒᏓᎵ. ᎯᎠ [[Mexican|ᎠᏍᏆᏂ]] ᎠᏂᏴᏫ ᎠᎩᏍᏗ ᎯᎠ ᎧᎵᏬᎯ ᏗᎦᎸᏫᏍᏓᏁᏗ, ᎠᎴ ᎠᎴᏂᏙᎲ ᏩᏚᎵᏏ-ᏧᎳᏍᎩ, ᎯᎠ ᏩᏚᎵᏏ ᏙᏒᏓᎵ (''Myrmecocystus'').<ref name="beq"/>
 
 ==== ᏙᏒᏓᎵ ᏥᏄᏍᏗ ᎠᏍᎩᎾᏗᏍᏗ ====
 ᎪᎯᏊ ᎢᏴ ᏥᎩ ᎤᎾᏙᏢᎯ ᎠᎦᏎᏍᏙᏗ ᎯᎠ ᏙᏒᏓᎵ ᎠᏍᎩᎾᏗᏍᏗ, ᎠᎴ ᎤᏍᏆᎸᎲ ᎯᎠ ᏓᏓᏁᏤᎸ ᎤᏁᎳᏅ ᎤᏬᏢᏅ ᏙᏒᏓᎵ ᎨᏥᏅᏏᏓ, ᎪᏣᎴᏍᏗᏱ ᏌᏊ ᎨᏒᎢ ᎾᎥᏂᎨ ᏰᎵ ᏂᎨᏒᎾ. ᎠᏍᎩᎾᏗᏍᏗ ᎠᎨᏔᏗᏍᏗ ᎬᏙᏗ ᎾᏍᎩ ᎣᏏ ᎠᏰᎸᏗ ᏙᏒᏓᎵ ᎨᏒᎢ ᎤᏟ ᎢᎦᎢ ᎢᏳᏍᏗ ᏯᏛᎿ ᎠᎨᏔᏗᏍᏗ ᎾᎥᎢ ᎾᏂᎥ ᏴᏫ ᎬᎾᏬᏍᎬ ᎪᏣᎴᏍᏗᏱ ᏂᎦᏛ ᎤᎾᏓᏡᎩ ᎢᏳᎾᏓᎵ. ᎠᏁᎸᏙᏗ ᎠᎨᏔᏗᏍᏗ ᏙᏒᏓᎵ ᎾᏂᎥ ᏴᏫ ᏂᎦᎵᏍᏗᏍᎬᎫ ᎤᏓᏅᏗ ᎢᎬᏱ ᎨᏰᎯ ᎪᎷᏩᏛᏓ.
@@ -193,11 +192,11 @@
 ᏙᏒᏓᎵ Ꮎ ᏍᎪᎯ ᏐᎢ ᎠᏂᏍᎧᏱ ᏰᎵᏇ ᎠᏓᏎᎮᏗ ᏂᎬᏂᏏᏍᎬ ᎠᏍᎩᎾᏗᏍᏗ ᎥᏳᎩ. ᎤᎪᏗᏗ [[homoptera]]n ᎠᏂᏍᎧᏱ Ꮎ ᎠᎦᏎᏍᏔᏅ ᏥᏄᏍᏗ ᏗᎦᎶᎪᏗ ᎠᏍᎩᎾᏗᏍᏗ ᎠᎨᏔᏗᏍᏗ ᎾᎥᎢ ᎯᎠ ᎬᏙᏗ ᎪᎢ ᏗᎵᏰᏑᏍᏔᏬ ᏀᎾ ᎯᎠ ᎧᏁᏌᎢ ᎯᎠ ᏕᏡᎬ. ᎾᏍᎩ ᎯᎠ ᏗᎵᏰᏑᏍᏔᏬ ᎠᏰᎳᏍᏗ ᎤᏣᏘᎾ ᎯᎠ ᎠᏲᏝᏗᏍᏗ ᎾᏍᎩᎾᎢ ᏙᏒᏓᎵ ᎠᎴ ᎪᏢᏗ ᎯᎠ ᎠᏍᎩᎾᏗᏍᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎦᏂᏰᎩ ᎠᏥᎾᏝᎢ ᎠᎴ predators.
 
 ==== ᏙᏒᏓᎵ ᎭᏫᎾᏗᏢ ᎥᎦᏔᎲᎢ ====
-ᏙᏒᏓᎵ ᎤᎭ ᎢᏳᏓᎵᎭ ᏭᏪᏙᎢ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ ᎧᏃᎮᏍᎩ ᎠᎴ ᏗᏂᏲᎵ ᎤᏤᎵ ᎢᏗᎦᎸᎳᏗ ᎢᏯᏓᏛᏁᏗ ᎠᎾᏕᎶᏆᏍᎬ ᎠᎴ ᎠᎵᎪᏗ ᎠᏁᎸᏙᏗ, ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᏗᎦᏘᎸᏍᏗ ᎠᎴ ᎠᏞᎢᏍᏗ. ᎭᏫᎾᏗᏢ ᎢᎦᏛᎭ Africa, ᏙᏒᏓᎵ ᎯᎠ ᎠᏂᏙᎯ ᎯᎠ ᎤᏁᎳᏅᎯ. ᏙᏒᏓᎵ ᎤᏍᎦᎶᏨ ᎢᏳᏓᎵᎭ ᏄᏪᏒᎩ ᎤᎭ ᏓᏓᎾᏅ ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ. ᎢᎦᏛ [[Native American mythology|ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᏗᏁᎸᏙᏗ]], ᏯᏛᎿ ᏥᏄᏍᏗ [[Hopi mythology|Hopi ᎤᏁᎳᏅᎯ]], ᎠᏓᏙᎵᏍᏗ ᏙᏒᏓᎵ ᏥᏄᏍᏗ ᎯᎠ ᎤᏙᎯᏳ ᎢᎬᏱ ᎡᎿᎢ ᎡᎥ. ᎠᏂᏐᎢ ᎬᏙᏗ ᏙᏒᏓᎵ ᎤᏍᎦᎶᏨ ᎭᏫᎾᏗᏢ [[initiation|ᏗᏓᏓᏂᎸᎢᏍᏗ]] ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᏥᏄᏍᏗ ᎠᎦᏛᏗ ᎦᏘᏍᏗ.
+ᏙᏒᏓᎵ ᎤᎭ ᎢᏳᏓᎵᎭ ᏭᏪᏙᎢ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ ᎧᏃᎮᏍᎩ ᎠᎴ ᏗᏂᏲᎵ ᎤᏤᎵ ᎢᏗᎦᎸᎳᏗ ᎢᏯᏓᏛᏁᏗ ᎠᎾᏕᎶᏆᏍᎬ ᎠᎴ ᎠᎵᎪᏗ ᎠᏁᎸᏙᏗ, ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᏗᎦᏘᎸᏍᏗ ᎠᎴ ᎠᏞᎢᏍᏗ. ᎭᏫᎾᏗᏢ ᎢᎦᏛᎭ ᎬᎿᎦᏍᏛ, ᏙᏒᏓᎵ ᎯᎠ ᎠᏂᏙᎯ ᎯᎠ ᎤᏁᎳᏅᎯ. ᏙᏒᏓᎵ ᎤᏍᎦᎶᏨ ᎢᏳᏓᎵᎭ ᏄᏪᏒᎩ ᎤᎭ ᏓᏓᎾᏅ ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ. ᎢᎦᏛ [[Native American mythology|ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᏗᏁᎸᏙᏗ]], ᏯᏛᎿ ᏥᏄᏍᏗ [[Hopi mythology|Hopi ᎤᏁᎳᏅᎯ]], ᎠᏓᏙᎵᏍᏗ ᏙᏒᏓᎵ ᏥᏄᏍᏗ ᎯᎠ ᎤᏙᎯᏳ ᎢᎬᏱ ᎡᎿᎢ ᎡᎥ. ᎠᏂᏐᎢ ᎬᏙᏗ ᏙᏒᏓᎵ ᎤᏍᎦᎶᏨ ᎭᏫᎾᏗᏢ [[initiation|ᏗᏓᏓᏂᎸᎢᏍᏗ]] ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᏥᏄᏍᏗ ᎠᎦᏛᏗ ᎦᏘᏍᏗ.
 
 ᎯᎠ Japanese ᎧᏁᏨ ᎾᏍᎩᎾᎢ ᏙᏒᏓᎵ, ''ari'', ᎨᏒᎢ ᏄᏓᏛᏁᎸᎩ ᎾᎥᎢ ᎩᎶ ᏂᏓᏳᏅᏅ ᎪᏪᎵ ᎪᏢᎯ ᎢᎦᏁᎸᎯ ᎯᎠ ᎠᎦᏓᏅᏖᏗ ᎾᏍᎩᎾᎢ ''ᏨᏍᎪᏱ'' ᎦᏟᏌᏅ ᎬᏙᏗ ᎯᎠ ᎠᎦᏓᏅᏖᏗ ᎦᎾᏄᎪᏫᏍᏗ ''ᎠᎦᏓᏅᏖᏗ ᎧᎵᏬᎯ'', ''ᏓᏓᏁᏤᎸ'' (''giri''). ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎯᎠ Chinese ᎠᎦᏓᏅᏖᏗ ᏰᎵᏇ ᏰᎵᏊ ᏱᎩ ᎾᏍᏋ ᎥᎪᎵᏰᏍᎬ ᏥᏄᏍᏗ ''ᎯᎠ ᏓᏓᏁᏤᎸ-ᏨᏍᎪᏱ''. Ꮝ ᎤᏙᎯᏳᏒ ᎧᏁᏨ ᎨᏒᎢ ᏄᏓᎷᎸᎾ ᎾᏍᏋ ᏄᏓᎴᎿᎥ ᏱᏂᎬᏛᎾ.<ref>Hearn, Lafcadio 1904. Kwaidan. Japanese - ᎢᏗᎦᎸᎳᏗ ᎠᎴ ᏗᎦᏎᏍᏙᏗ ᎠᏎᎩ ᏧᏓᎴᏅᏓ [http://www.worldwideschool.org/library/books/socl/customsetiquettefolklore/Kwaidan/toc.html text]</ref>
 
-ᏙᏒᏓᎵ ᎤᎾᏙᏢᎯ ᎤᎭ ᏂᎪᎯᎸᎢ ᎠᏓᏂᎳᏕᏗ ᎠᏂᏴᏫ ᎠᎴ ᎤᎭ ᏭᏪᏙᎢ ᎪᏪᎳᏅᎯ ᎬᏩᏚᏫᏛ ᎢᏧᎳ ᎤᏬᏢᏗ ᎠᎴ ᎤᏛᏲᎵᏍᏔᏅᎯ ᎾᎥᎢ ᎠᏃᏪᎵᏍᎩ. [[Mark Twain|ᎤᏙᏪᎸ Twain]] ᎤᏬᏪᎳᏅ ᎬᏩᏚᏫᏛ ᏙᏒᏓᎵ ᎭᏫᎾᏗᏢ ᎤᏤᎵ ''ᎥᎢᏒᎢ ᎢᏅ''. ᎭᏫᎾᏗᏢ ᎤᏟ ᎢᎦᎢ ᎾᏞᎬ ᎠᎴᏰᏑ, ᎥᎴᏂᏙᎲ ᎠᏂᎶᏁᏍᎬ ᏄᏍᏛ ᏗᎧᏃᏗ ᏙᏒᏓᎵ ᎤᎭ ᏭᏪᏙᎢ ᎠᏛᎯᏍᏔᏅ ᎠᏠᏯᏍᏛ [[Antz]],  [[A Bug's Life|ᏥᏍᎪᏯ ᎤᏤᎵ ᎥᎴᏂᏙᎲ]], [[The Ant Bully|ᎯᎠ ᏙᏒᏓᎵ ᏥᏳ]], [[The Ant and the Aardvark|ᎯᎠ ᏙᏒᏓᎵ ᎠᎴ ᎯᎠ Aardvark]] ᎠᎴ [[Atom Ant|ᎤᏍᏗ ᏙᏒᏓᎵ]].
+ᏙᏒᏓᎵ ᎤᎾᏙᏢᎯ ᎤᎭ ᏂᎪᎯᎸᎢ ᎠᏓᏂᎳᏕᏗ ᎠᏂᏴᏫ ᎠᎴ ᎤᎭ ᏭᏪᏙᎢ ᎪᏪᎳᏅᎯ ᎬᏩᏚᏫᏛ ᎢᏧᎳ ᎤᏬᏢᏗ ᎠᎴ ᎤᏛᏲᎵᏍᏔᏅᎯ ᎾᎥᎢ ᎠᏃᏪᎵᏍᎩ. [[Mark Twain|ᎤᏙᏪᎸ Twain]] ᎤᏬᏪᎳᏅ ᎬᏩᏚᏫᏛ ᏙᏒᏓᎵ ᎭᏫᎾᏗᏢ ᎤᏤᎵ ''ᎥᎢᏒᎢ ᎢᏅ''. ᎭᏫᎾᏗᏢ ᎤᏟ ᎢᎦᎢ ᎾᏞᎬ ᎠᎴᏰᏑ, ᎥᎴᏂᏙᎲ ᎠᏂᎶᏁᏍᎬ ᏄᏍᏛ ᏗᎧᏃᏗ ᏙᏒᏓᎵ ᎤᎭ ᏭᏪᏙᎢ ᎠᏛᎯᏍᏔᏅ ᎠᏠᏯᏍᏛ [[Antz]], [[A Bug's Life|ᏥᏍᎪᏯ ᎤᏤᎵ ᎥᎴᏂᏙᎲ]], [[The Ant Bully|ᎯᎠ ᏙᏒᏓᎵ ᏥᏳ]], [[The Ant and the Aardvark|ᎯᎠ ᏙᏒᏓᎵ ᎠᎴ ᎯᎠ Aardvark]] ᎠᎴ [[Atom Ant|ᎤᏍᏗ ᏙᏒᏓᎵ]].
 
 ==== ᏙᏒᏓᎵ ᎭᏫᎾᏗᏢ ᏗᏁᎸᏙᏗ ====
 Muslims ᎭᏫᎾᏗᏢ ᏂᎦᎥ ᏗᏓᏅᏗᏍᏙᏗ ᎠᏓᎯᏍᏗ ᏙᏒᏓᎵ ᎤᏍᏆᎸᎲ Ꮝ ᎧᏁᎢᏍᏙᏗ ᎭᏫᎾᏗᏢ ᏧᏁᎸᏗᏯ ᏓᎵᏍᏛ.<ref>[[Quran]] 27:18-19[http://www.wright-house.com/religions/islam/Quran/27-ant.html]</ref><ref>[[Sahih Bukhari]] Vol 4, ᎪᏪᎵ 54, ᏎᏍᏗ 536 [http://www.usc.edu/dept/MSA/fundamentals/hadithsunnah/bukhari/054.sbt.html]</ref>
