--- a/ᎤᏂᏥ.mw
+++ b/ᎤᏂᏥ.mw
@@ -25,9 +25,7 @@
 <references />
 </div>
 
-[[Category:Family]]
-[[Category:Human development]]
-[[Category:Women]]
+[[Category:ᎤᎾᏙᏢᎯ]]
 
 [[af:Moeder]]
 [[an:Mai]]
