--- a/ᏴᏭᏁᎦ.mw
+++ b/ᏴᏭᏁᎦ.mw
@@ -1,5 +1,11 @@
+[[File:Masterpieces.jpg|thumb|ᎩᎵᏏ ᏗᎪᏪᎵ]]
 '''ᎩᎵᏏ''' (ᏲᏁᎦ) [[ᎠᏨᏍᏘᏱ]] [[ᎦᏬᏂᎯᏍᏗ]]. ᎩᎵᏏᏃ ᎦᏬᏂᎯᏍᏗ ᎠᏰᎵ ᎤᏒᎧᎵ [[ᎠᎺᎢ]], ᎩᎵᏏ, [[ᎠᎤᏍᏞᎢᏯ]], ᎠᎴ ᎠᏂᏐᎢ.
 
+==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
+{{Commonscat|English language}}
+
+[[Category:ᏳᎳᏛ]]
+[[Category:ᎦᏬᏂᎯᏍᏗ]]
 {{stub}}
 
 [[ace:Bahsa Inggréh]]
