--- a/ᏲᎾ_ᏗᎧᏃᎩᏍᏗ.mw
+++ b/ᏲᎾ_ᏗᎧᏃᎩᏍᏗ.mw
@@ -1,4 +1,4 @@
-[[File:ᏲᎾ.png]]
+[[File:ᏲᎾ.png|thumb|300px]]
 
 ᎪᎯᎦ ᏥᎨᏒ ᎡᎮ ᏣᎳᎩ ᏧᏂᏴᏫ ᎠᏂᏣᎫᎢ ᎨᎪᏎᎸᎢ, ᎠᎴ ᏌᏊ ᏏᏓᏁᎸ ᎤᎾᏙᏢᏒ ᎾᏍᎩ
 ᎯᎠ ᎫᏂᏴᏫ ᎡᎮ ᎠᏧᏣ ᎠᏂᎩᏍᎨᏃ ᏧᏪᏅᏒ ᎠᎴ ᎤᏙᏓᏩᏓ ᏙᏦᏓᎸ ᏪᏙᎲᎢ. ᎢᏴᏓᎵᎭᏃ
@@ -32,28 +32,34 @@
 ᏫᏚᎾᎧᎾᏁ ᎠᎴ ᏫᏚᏂᎪᎮ ᎯᎸᏍᎩ ᎢᏯᏂᎢ ᏲᎾ ᏩᏁᎬ ᎠᏙᎯ ᎢᏗᏜ.
 ᎢᎬᏱ ᏲᎾ ᎧᏃᎩᏍᏗ
 Ꭾ-Ꭱ! ᎠᏂᏣᎫᎯ, ᎠᏂᏣᎫᎯ, ᎠᏆᏚᎵ ᎡᎳᏗ ᏗᎦᏥᏅᏗ, ᎠᏂᏣᎫᎯ, ᎠᏂᏣᎫᎯ, ᎠᏆᏚᎵ ᎡᎳᏗ
-ᏗᎦᏥᏅᏗ - - Ᏻ!
+ᏗᎦᏥᏅᏗ – Ᏻ!<br/>
 Ꮎ ᏲᎾ ᏧᏲᎯ ᎠᎴ ᏅᏗᏍᎪ ᏂᎪᎸ ᏒᎾᎴᎢ ᎠᎹ ᎬᏍᎬᎢ, ᎠᎴ Ꮭ ᏯᎵᏍᏓᏴᎲᏍᎪ ᎬᏂ
 ᏒᎯᏰᏱ ᏱᏄᎵᏍᏔᎾ. ᎯᎠᏃ ᎧᏃᎩᏍᎪ ᎧᏃᎩᏓ ᎤᎵᏦᏛ ᏳᏂᎩᏌ, ᎠᎴ ᏏᏊ ᏐᎢ ᏳᎩᏨᎾ,
-ᎠᏎᏃ Ꮭ ᎢᎸᎯᏳ ᏔᎵ ᎢᏳᏣᎪᏗ ᏏᎦᏊ ᎨᏒᎢ.
-ᏔᎵᏁ ᏲᎾ ᏃᎩᏍᏗ
-ᎯᎠᏃ ᎧᏃᎩᏍᏗ ᎾᏍᏊ ᎧᏃᎩᏍᎪ Ꮎ ᏲᎾ ᏧᏲᎯ, ᏕᎦᎳᏅᏗᏍᎬ Ꮎ ᏲᎾ, ᏅᏓᏳᏂᎩᏓ
-ᎤᏬᏢᏒ ᎤᎿ ᎤᏃᎭᎵᏓᏍᏗ ᎤᏙᏓᏫᏗᏒᎢ. ᏄᏍᏛᏃᎤᏃᏴᎬ ᎧᏃᎩᏓ ᎠᎯᏓ ᎠᎴ ᎣᏍᏓ ᎬᏛᎪᏗ.
+ᎠᏎᏃ Ꮭ ᎢᎸᎯᏳ ᏔᎵ ᎢᏳᏣᎪᏗ ᏏᎦᏊ ᎨᏒᎢ.<br/>
+ᏔᎵᏁ ᏲᎾ ᏃᎩᏍᏗ<br/>
+ᎯᎠᏃ ᎧᏃᎩᏍᏗ ᎾᏍᏊ ᎧᏃᎩᏍᎪ Ꮎ ᏲᎾ ᏧᏲᎯ, ᏕᎦᎳᏅᏗᏍᎬ Ꮎ ᏲᎾ, ᏅᏓᏳᏂᎩᏓ<br/>
+ᎤᏬᏢᏒ ᎤᎿ ᎤᏃᎭᎵᏓᏍᏗ ᎤᏙᏓᏫᏗᏒᎢ. ᏄᏍᏛᏃᎤᏃᏴᎬ ᎧᏃᎩᏓ ᎠᎯᏓ ᎠᎴ ᎣᏍᏓ ᎬᏛᎪᏗ.<br/>
 Ꭾ-Ꭱ! ᎭᏳᏯ’ ᎭᏂᏩ; ᎭᏳᏯ’ ᎭᏂᏩ; ᎭᏳᏯ’ ᎭᏂᏩ; ᎭᏳᏯ’ ᎭᏂᏩ; ᏥᏍᏚᏱ’ ᏁᎭᎾᏚᏯᏄ;
-ᏥᏍᏚᏱ’ ᏁᎭᎾᏚᏯᏄ - - ᏲᎰ-Ꭳ!
+ᏥᏍᏚᏱ’ ᏁᎭᎾᏚᏯᏄ – ᏲᎰ-Ꭳ!<br/>
 Ꭾ-Ꭱ! ᎭᏳᏯ’ ᎭᏂᏩ; ᎭᏳᏯ’ ᎭᏂᏩ; ᎭᏳᏯ’ ᎭᏂᏩ; ᎭᏳᏯ’ ᎭᏂᏩ; ᎫᏬᎯ’ ᏁᎭᎾᏚ’ ᏯᏄ;
-ᎫᏬᎯ’ ᏁᎭᎾᏚ’ ᏯᏄ; - - ᏲᎰ-Ꭳ!
+ᎫᏬᎯ’ ᏁᎭᎾᏚ’ ᏯᏄ; – ᏲᎰ-Ꭳ!<br/>
 Ꭾ-Ꭱ! ᎭᏳᏯ’ ᎭᏂᏩ; ᎭᏳᏯ’ ᎭᏂᏩ; ᎭᏳᏯ’ ᎭᏂᏩ; ᎭᏳᏯ’ ᎭᏂᏩ; ᎤᏯᏰ’ ᏁᎭᎾᏚ’ ᏯᏄ;
-ᎤᏯᏰ ᏁᎭᎾᏚ’ ᏯᏄ; - - ᏲᎰ- Ꭳ!
+ᎤᏯᏰ ᏁᎭᎾᏚ’ ᏯᏄ; – ᏲᎰ-Ꭳ!<br/>
 Ꭾ-Ꭱ! ᎭᏳᏯ’ ᎭᏂᏩ; ᎭᏳᏯ’ ᎭᏂᏩ; ᎭᏳᏯ’ ᎭᏂᏩ; ᎭᏳᏯ’ ᎭᏂᏩ; ᎦᏖᏆ’ ᏁᎭᎾᏚ’ ᏯᏄ;
-ᎦᏖ’ Ꮖ’ ᏁᎭᎾᏚ’ ᏯᏄ; - - ᏲᎰ-Ꭳ!
+ᎦᏖ’ Ꮖ’ ᏁᎭᎾᏚ’ ᏯᏄ; – ᏲᎰ-Ꭳ!<br/>
 (ᎢᎦᏪᏓ) ᎤᎴ-Ꮔ ᎠᏎᎯ’ ᏔᏕᏯᏍᏔᏗᎯ’ ᎬᎿᎨ ᎠᏍᏚ’ ᏥᎩ’ Ꭾ! ᎭᏳᏯ’ ᎭᏂᏩ’ (ᏅᎩ
-ᎢᏳᏩᎪᏘ)
-ᏥᏍᏚᏱᎢ’ ᏁᎭᎾᏚ’ ᏯᏄ (ᏔᎵ ᎢᏳᏩᎪᏘ) - - ᏲᎰ!
-Ꭾ! ᎭᏳᏯ’ ᎭᏂᏩ (ᏅᎩ ᎢᏳᏩᎪᏘ)
-ᏧᏬᎯᎢ’ ᏁᎭᎾᏚ’ ᏯᏄ (ᏔᎵ ᎢᏳᏩᎪᏘ) - - ᏲᎰ!
-Ꭾ! ᎭᏳᏯ’ ᎭᏂᏩ’ (ᏅᎩ ᎢᏳᏩᎪᏘ)
-ᎤᏯ’ Ᏸ ᏁᎭᎾᏚ’ ᏯᏄ (ᏔᎵ ᎢᏳᏩᎪᏘ) - - ᏲᎰ!
-Ꭾ! ᎭᏳᏯ’ ᎭᏂᏩ’ (ᏅᎩ ᎢᏳᏩᎪᏘ)
-ᎦᏖ’ Ꮖ ᏁᎭᎾᏚ’ ᏯᏄ (ᏔᎵ ᎢᏳᏩᎪᏘ) - - ᏲᎰ!
-ᎠᎴ ᎾᏊ ᏙᎯᏳ ᏂᏗᎥ ᎠᎴ Ꮎ ᏦᏍᏓ ᎬᎿᎨ ᎪᎱᏍᏗ, ᏫᏓᏤᎸᏃ, ᏙᏓᏓᏓᎪᎯ
+ᎢᏳᏩᎪᏘ)<br/>
+ᏥᏍᏚᏱᎢ’ ᏁᎭᎾᏚ’ ᏯᏄ (ᏔᎵ ᎢᏳᏩᎪᏘ) – ᏲᎰ!<br/>
+Ꭾ! ᎭᏳᏯ’ ᎭᏂᏩ (ᏅᎩ ᎢᏳᏩᎪᏘ)<br/>
+ᏧᏬᎯᎢ’ ᏁᎭᎾᏚ’ ᏯᏄ (ᏔᎵ ᎢᏳᏩᎪᏘ) – ᏲᎰ!<br/>
+Ꭾ! ᎭᏳᏯ’ ᎭᏂᏩ’ (ᏅᎩ ᎢᏳᏩᎪᏘ)<br/>
+ᎤᏯ’ Ᏸ ᏁᎭᎾᏚ’ ᏯᏄ (ᏔᎵ ᎢᏳᏩᎪᏘ) – ᏲᎰ!<br/>
+Ꭾ! ᎭᏳᏯ’ ᎭᏂᏩ’ (ᏅᎩ ᎢᏳᏩᎪᏘ)<br/>
+ᎦᏖ’ Ꮖ ᏁᎭᎾᏚ’ ᏯᏄ (ᏔᎵ ᎢᏳᏩᎪᏘ) – ᏲᎰ!<br/>
+ᎠᎴ ᎾᏊ ᏙᎯᏳ ᏂᏗᎥ ᎠᎴ Ꮎ ᏦᏍᏓ ᎬᎿᎨ ᎪᎱᏍᏗ, ᏫᏓᏤᎸᏃ, ᏙᏓᏓᏓᎪᎯ<br/>
+
+==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
+* [http://www.youtube.com/watch?v=tyaRMyZwmBc ᏲᎾ ᎠᎳᏍᎩᏓᎶ], ᎤᎾᏛᎶᏗ
+
+[[Category:ᏣᎳᎩ]]
+[[Category:ᏗᎧᏃᎩᏛ]]
