--- a/ᏌᎪᏂᎨ_ᏣᎴᎩ.mw
+++ b/ᏌᎪᏂᎨ_ᏣᎴᎩ.mw
@@ -1,7 +1,7 @@
 [[File:Blue Ridge NC.jpg|thumb|right|200px|ᏌᎪᏂᎨ ᏣᎴᎩ ᏙᏓᎸ, ᎤᏥᏍᏓᎷᎩᏍᎬ ᏅᏯ ᏓᎧᏁᎲ ᎡᏍᎦᏂ]]
 [[File:Appalachian_map.jpg|thumb|right|'''[[Appalachian Mountain system|Appalachian ᎣᏓᎸ iyahdvnelidasdi]]''' ]]
 
-ᎯᎠ '''ᏌᎪᏂᎨ ᏣᎴᎩ''' ᎨᏒᎢ ᎣᏓᎸ ᎤᎾᏓᏕᏒᏓ ᎭᏫᎾᏗᏢ ᎯᎠ ᎧᎸᎬᎢᏗᏢ [[United States|ᎠᏫᏒᏗ ᎧᏃᎮᎭ]], ᎢᎦᏛ ᎯᎠ [[Appalachian Mountains|Appalachian ᏙᏓᎸ]], ᏑᏓᎴᎩ ᎤᎾᏤᎵ ᎧᎸᎬᎢᏗᏢ ᎢᎬᏱᏗᏢ ᏂᏛᎴᏅᏓ Georgia Pennsylvania. ᎯᎠ ᏭᏕᎵᎬ ᎯᎠ ᏌᎪᏂᎨ ᏣᎴᎩ, ᎠᏰᎵ ᎾᏍᎩ ᎠᎴ ᎯᎠ ᎤᎪᏗᏗ ᎯᎠ Appalachians, ᏓᏂᎾᎬ ᎯᎠ [[Great Appalachian Valley|ᎡᏆ ᎤᎨᏓᎵᏴ]], bordered ᎾᎿ ᎯᎠ ᏭᏕᎵᎬ ᎾᎥᎢ ᎯᎠ [[Ridge-and-valley Appalachians|ᏣᎴᎩ ᎠᎴ ᎤᎨᏓᎵᏴ]] ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ. 
+ᎯᎠ '''ᏌᎪᏂᎨ ᏣᎴᎩ''' ᎨᏒᎢ ᎣᏓᎸ ᎤᎾᏓᏕᏒᏓ ᎭᏫᎾᏗᏢ ᎯᎠ ᎧᎸᎬᎢᏗᏢ [[United States|ᎠᎹᏰᏟ]], ᎢᎦᏛ ᎯᎠ [[Appalachian Mountains|Appalachian ᏙᏓᎸ]], ᏑᏓᎴᎩ ᎤᎾᏤᎵ ᎧᎸᎬᎢᏗᏢ ᎢᎬᏱᏗᏢ ᏂᏛᎴᏅᏓ [[Georgia|ᏣᏥᏱ]] [[Pennsylvania|ᎤᎩᏓᎵᏱ]]. ᎯᎠ ᏭᏕᎵᎬ ᎯᎠ ᏌᎪᏂᎨ ᏣᎴᎩ, ᎠᏰᎵ ᎾᏍᎩ ᎠᎴ ᎯᎠ ᎤᎪᏗᏗ ᎯᎠ Appalachians, ᏓᏂᎾᎬ ᎯᎠ [[Great Appalachian Valley|ᎡᏆ ᎤᎨᏓᎵᏴ]], bordered ᎾᎿ ᎯᎠ ᏭᏕᎵᎬ ᎾᎥᎢ ᎯᎠ [[Ridge-and-valley Appalachians|ᏣᎴᎩ ᎠᎴ ᎤᎨᏓᎵᏴ]] ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ. 
 
 ᎤᎪᏗᏗ ᎯᎠ ᎯᎸᏍᎩ ᏅᏯ Ꮎ ᎤᏙᏢᏒ ᎯᎠ ᏌᎪᏂᎨ ᏣᎴᎩ ᏙᏓᎸ ᎠᎴ ᎯᎸᎯᏳᎢ [[granitic|ᎤᏓᏅᏖᏗ]] charnockites, metamorphosed ᎠᎾᎵᏖᎸᎲᏍᎬ ᎦᏁᏰᎩ ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ, ᎠᎴ ᏩᎵᏃᎯᏯᏍᎬ limestones. ᏌᎪᏂᎨ ᏣᎴᎩ charnockites ᎠᎴ 1.2 ᎯᏍᎩ ᏧᏕᏘᏴᏓ ᎭᏫᎾᏗᏢ lyudetiyvda. ᎯᎠ ᎤᏍᎦᏃᎳ, ᎠᎵᏏᎾᎯᏍᏗ ᎠᏂᏌᏙᏯᏍᎩ ᎦᏃᎸᎥᏍᎬ, ᎠᎹ, ᎠᎴ chemical ᎠᎽᏰᎵ ᎤᎭ ᎠᎦᏲᎳᏛᎯ ᎯᎠ ᏌᎪᏂᎨ ᏣᎴᎩ ᏂᏛᎴᏅᏓ [[Sierra Nevada (US)|Sierra]]-ᎾᏍᎩᏯᎢ ᎤᏜᏅᏛ ᎯᎠ ᎡᎳᏗ ᏌᏆᎦᏘ ᎠᎦᏴᎵ ᎣᏓᎸ ᎠᏍᏓᏅᏅ ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᎡᏆ ᎢᎦᎢ ᎨᏒ ᎠᏲᎶᎬ ᎬᏙᏗ-ᏗᎦᏘᎸᏍᏗ limestones Ꮎ ᎾᏊ ᎬᏂᎨᏒ ᏄᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ lowered ᎤᎨᏓᎵᏴ.
 
@@ -9,9 +9,9 @@
 
 ᎾᏍᎩ ᎤᏁᎳᎩ ᎯᎠ ᎠᎴᏂᏍᎬ "ᏌᎪᏂᎨ ᏣᎴᎩ" ᎨᏒᎢ ᏱᏓᏟᎶᏍᏔᏅ ᎢᎬᎾᏔᏅᎯ ᎠᏍᏓᏩᏛᏍᏗ ᎢᏯᏛᏁᏗ ᎯᎠ ᎧᎸᎬᎢᏗᏢ ᎠᏍᏛᎢ ᎠᎴ ᎢᎬᏱᏗᏢ ᎠᏍᏓᏅᏅ ᎯᎠ Appalachian ᏙᏓᎸ, ᎭᏫᎾᏗᏢ ᎦᏙ ᎤᏍᏗ ᎠᏍᏓᏅᏅ [[Grandfather Mountain|ᎤᏚᏚ ᎣᏓᎸ]] ᎨᏒᎢ ᎯᎠ ᏩᎦᎸᎳᏗᏴ ᏫᎪᏍᏓᏴ, ᎯᎠ geological ᏩᏎᏍᏗ ᎾᎿ ᎯᎠ ᏌᎪᏂᎨ ᏣᎴᎩ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎧᏁᏉᏍᏗ westward ᎯᎠ [[Ridge-and-valley Appalachians|ᏣᎴᎩ ᎠᎴ ᎤᎨᏓᎵᏴ]] ᎡᏍᎦᏂ, ᎦᏃᎴᏍᎬ ᎯᎠ [[Great Smoky Mountains|ᎡᏆ ᏚᏧᏍᏚ ᏙᏓᎸ]], ᎯᎠ ᎡᏆ ᎠᏅᏬᏗ, ᎯᎠ ᎩᎦᎨ ᎢᏳᏍᏗ, ᎯᎠ [[Brushy Mountains (North Carolina)|Brushy ᏙᏓᎸ]] ("ᎠᏴᎩᏍᏗ" ᎯᎠ ᏌᎪᏂᎨ ᏣᎴᎩ} ᎠᎴ ᏐᎢ ᎣᏓᎸ ᎠᏍᏓᏅᏅ.
 
-ᎯᎠ ᏌᎪᏂᎨ ᏣᎴᎩ ᎧᏁᏉᏍᏗ ᎤᏴᏢ ᎾᎾᎯ [[Pennsylvania]] ᏥᏄᏍᏗ [[South Mountain (Maryland and Pennsylvania)|ᎤᎦᎾᏭ ᎣᏓᎸ]]. ᎾᎯᏳᎢ ᎤᎦᎾᏭ ᎣᏓᎸ ᎠᎦᏲᎳᏗᏍᏗ ᎾᏍᎩ ᎤᏩᏒ ᏗᎦᏚᏏ ᎠᏰᎵ [[Gettysburg, Pennsylvania|Gettysburg]] ᎠᎴ [[Harrisburg, Pennsylvania|Harrisburg]], ᎯᎠ ᏗᏂᏤᎷᎯᏍᎩ ᎯᎸᎯᏳᎢ ᎯᎸᏍᎩ ᏅᏯ Ꮎ ᏚᏙᏢᏒ ᎯᎠ ᎠᏰᎵ ᎯᎠ ᏌᎪᏂᎨ ᏣᎴᎩ ᏫᎬᎵᏱᎴᎩ ᎤᏴᏢ ᎧᎸᎬ ᎢᏗᏢ ᏗᎬᏩᎶᏒ ᎯᎠ [[New Jersey|ᎢᏤ ᎫᏢᎥᏍᎬ]] ᎠᎴ [[Hudson River|Hudson ᎤᏪᏴ]] ᏂᎦᏛᎢ, ᏭᎵᏱᎶᎸ ᎠᎾᏙᏯᏅᎯᏗᏍᎬ [[The Berkshires|ᎯᎠ Berkshires]] [[Massachusetts]] ᎠᎴ ᎯᎠ [[Green Mountains|ᎢᏤ ᎢᏳᏍᏗ ᏙᏓᎸ]] [[Vermont]]. 
+ᎯᎠ ᏌᎪᏂᎨ ᏣᎴᎩ ᎧᏁᏉᏍᏗ ᎤᏴᏢ ᎾᎾᎯ ᎤᎩᏓᎵᏱ ᏥᏄᏍᏗ [[South Mountain (Maryland and Pennsylvania)|ᎤᎦᎾᏭ ᎣᏓᎸ]]. ᎾᎯᏳᎢ ᎤᎦᎾᏭ ᎣᏓᎸ ᎠᎦᏲᎳᏗᏍᏗ ᎾᏍᎩ ᎤᏩᏒ ᏗᎦᏚᏏ ᎠᏰᎵ [[Gettysburg, Pennsylvania|Gettysburg, ᎤᎩᏓᎵᏱ]] ᎠᎴ [[Harrisburg, Pennsylvania|Harrisburg, ᎤᎩᏓᎵᏱ]], ᎯᎠ ᏗᏂᏤᎷᎯᏍᎩ ᎯᎸᎯᏳᎢ ᎯᎸᏍᎩ ᏅᏯ Ꮎ ᏚᏙᏢᏒ ᎯᎠ ᎠᏰᎵ ᎯᎠ ᏌᎪᏂᎨ ᏣᎴᎩ ᏫᎬᎵᏱᎴᎩ ᎤᏴᏢ ᎧᎸᎬ ᎢᏗᏢ ᏗᎬᏩᎶᏒ ᎯᎠ [[New Jersey|ᎠᏤ ᏨᏏ]] ᎠᎴ [[Hudson River|Hudson ᎤᏪᏴ]] ᏂᎦᏛᎢ, ᏭᎵᏱᎶᎸ ᎠᎾᏙᏯᏅᎯᏗᏍᎬ [[The Berkshires|ᎯᎠ Berkshires]] [[Massachusetts|ᎺᏌᏧᏎᏗ]] ᎠᎴ ᎯᎠ [[Green Mountains|ᎢᏤ ᎢᏳᏍᏗ ᏙᏓᎸ]] [[Vermont|ᏣᏩᎦ]]. 
 
-ᎯᎠ ᏩᎦᎸᎳᏗᏴ ᏫᎪᏍᏓᏴ ᎭᏫᎾᏗᏢ ᎯᎠ ᏌᎪᏂᎨ ᏣᎴᎩ ᎠᎴ ᎯᎠ Appalachian ᎤᎾᏓᏕᏒᏓ ᎨᏒᎢ [[Mount Mitchell (North Carolina)|Mt. Mitchell]] ᎭᏫᎾᏗᏢ [[North Carolina|ᎤᏴᏢ Carolina]] ᎾᎾᎢ 6,684 ᏧᎾᎳᏏᏕᎾ (2,037 m). ᎾᎿᎢ ᎠᎴ 39 ᏫᎪᏍᏓᏴ ᎭᏫᎾᏗᏢ ᎤᏴᏢ Carolina ᎠᎴ ᏖᎾᏏ ᎦᎸᎳᏗᎨᏍᏙᏗ ᎬᎾᏬᏍᎬ 6,000 ᏧᎾᎳᏏᏕᎾ (1,829 m); ᎾᎥᎢ ᎤᏠᏱ ᎾᎬᏁᎲ, ᎯᎠ ᎤᏴᏢ ᎢᏗᏢ ᎢᎦᏛ ᎯᎠ Appalachian ᎤᎾᏓᏕᏒᏓ ᎢᎦᎢ ᎨᏐ ᎾᏍᎩ ᎤᏩᏒ ᏌᏊ 6,000 ᎤᎳᏏᏕᎾ ᏫᎪᏍᏓᏴ, [[New Hampshire|ᎢᏤ Hampshire]] ᎤᏤᎵ [[Mount Washington (New Hampshire)|Mt. Washington]].
+ᎯᎠ ᏩᎦᎸᎳᏗᏴ ᏫᎪᏍᏓᏴ ᎭᏫᎾᏗᏢ ᎯᎠ ᏌᎪᏂᎨ ᏣᎴᎩ ᎠᎴ ᎯᎠ Appalachian ᎤᎾᏓᏕᏒᏓ ᎨᏒᎢ [[Mount Mitchell (North Carolina)|Mt. Mitchell]] ᎭᏫᎾᏗᏢ [[North Carolina|ᎦᏯᎴᏂ]] ᎾᎾᎢ 6,684 ᏧᎾᎳᏏᏕᎾ (2,037 m). ᎾᎿᎢ ᎠᎴ 39 ᏫᎪᏍᏓᏴ ᎭᏫᎾᏗᏢ ᎤᏴᏢ Carolina ᎠᎴ ᏖᎾᏏ ᎦᎸᎳᏗᎨᏍᏙᏗ ᎬᎾᏬᏍᎬ 6,000 ᏧᎾᎳᏏᏕᎾ (1,829 m); ᎾᎥᎢ ᎤᏠᏱ ᎾᎬᏁᎲ, ᎯᎠ ᎤᏴᏢ ᎢᏗᏢ ᎢᎦᏛ ᎯᎠ Appalachian ᎤᎾᏓᏕᏒᏓ ᎢᎦᎢ ᎨᏐ ᎾᏍᎩ ᎤᏩᏒ ᏌᏊ 6,000 ᎤᎳᏏᏕᎾ ᏫᎪᏍᏓᏴ, [[New Hampshire|ᎠᏤ ᎭᎻᏒ]] ᎤᏤᎵ [[Mount Washington (New Hampshire)|Mt. Washington]].
 
 ᎯᎠ ᎩᎵᏏ ᎦᎪ ᏗᏓᏙᎳᏤᏗ [[Virginia]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᎬᏱ 1600s ᎪᏪᎳᏅᎯ Ꮎ ᎯᎠ ᎾᏰᎯᏯ [[Powhatan]] ᏚᏙᎥ ᎾᏍᎩᎾᎢ ᎯᎠ ᏌᎪᏂᎨ ᏣᎴᎩ ᏥᏄᏍᏛᎩ ''Quirank''.
 
