--- a/ᏓᎾᎵᎲ.mw
+++ b/ᏓᎾᎵᎲ.mw
@@ -2,7 +2,7 @@
 
 '''ᎠᏥᎡᏗᏱ''', ᎠᎴ '''ᏓᎾᎵᎲ''', ᎨᏒᎢ purposeful [[violent|ᎬᏂᎦᎳᏍᏗ ᎦᎾᏰᎩ]] [[conflict|ᏂᏓᏙᎳᎬᎾ]] ᎠᏰᎵ ᏌᏊ ᎠᎴ ᎤᏟ ᎢᎦᎢ [[person|ᎠᏏᏴᏫ]]ᎠᎴ ᏧᎾᏙᏢᎯ, ᎢᏳᏓᎵᎭ ᏄᏪᎵᏒ ᎪᏢᏗ [[dominance (biology)|ᎾᏓᏛᏂᏌᏁᎲ]] ᎦᏬᎯᎸᏙᏗ ᎯᎠ [[Opposition (politics)|ᏗᎦᏘᎸᏍᏗ]]. ᎯᎠ ᎠᎴᏂᏍᎬ "ᎠᏥᎡᏗᏱ" ᎢᏯᏛᏁᎵᏓᏍᏗ ᏩᏎᎯᎰᎢ ᎤᎵᏍᏕᎸᏗ ᏂᏓᏙᎳᎬᎾ ᎠᏰᎵ [[military force|ᎠᏂᏯᏫᏍᎩ ᎦᏌᏙᏯᏍᏗ]]ᎭᏫᎾᏗᏢ [[warfare|ᏓᎾᏩᏄᏁᎯ]], ᎠᎦᏎᏍᏙᏗ ᎯᎠ ᎤᏟ ᎢᎦᎢ ᏂᎦᎥ ᎠᎴᏂᏍᎬ "ᏓᎾᎵᎲ" ᏰᎵᏇ ᏩᏎᏍᏗ ᏂᎦᎵᏍᏗᏍᎬᎫ ᎬᏂᎦᎳᏍᏗ ᎦᎾᏰᎩ ᏂᏓᏙᎳᎬᎾ, ᎠᏠᏯᏍᏗᏍᎩ [[boxing|ᎠᏥᎡᏗᏱ]] ᎠᎴ [[wrestling|ᎠᏥᎡᏗᏱ]] matches. ᎠᏥᎡᏗᏱ ᎠᎾᎵᏖᎸᎲᏍᎬ ᎦᏁᏰᎩ ᏰᎵᏇ ᎾᏍᏋ unilateral, ᎠᎦᏎᏍᏙᏗ ᏓᎾᎵᎲ implies ᎾᎾᎢ ᎠᏂᎦᏲᎵ ᎤᎾᏓᏟᏌᎲ ᎥᏓᏓᎫᏴᎡᏗᏱ. ᏱᏂᎬᏛᎾ, ᎯᎠ ᏓᏓᎴᏂᏍᎬ ᎠᎴ ᎢᏳᏓᎵᎭ ᎬᏔᏅᎯ [[synonym|ᎦᏛᎬᎢ]]ously.
 
-ᎠᏥᎡᏗᏱ ᎠᎾᏍᎬᏘ ᎠᎩᏍᏗ ᎾᎿᎢ ᎭᏫᎾᏗᏢ ᎤᏙᎯᏳ ᎠᏫᏒᏗ [[law|ᎠᏍᏓᏩᏛᏍᏙᏗ]]ᎠᎴ ᎾᏍᏋ unregulated. ᏱᏓᏟᎶᏍᏔᏅ ᏗᎫᎪᏔᏅ ᎠᏠᏯᏍᏛ ᎯᎠ [[Geneva Convention|Geneva ᎤᏓᏂᏝᏅ]] (ᎫᏢᎥᏍᎬ ᎯᎠ ᎧᏅᏩᏅᎯ ᎠᏂᏯᏫᏍᎩ ᎭᏫᎾᏗᏢ ᏓᏄᏩ), lyudetiyvda [[chivalry|ᏓᎾᏩᏄᏁᎯ]] (ᎯᎠ ᎠᏍᏓᏩᏛᏍᏙᏗ ᎤᎪᏗᏗ ᎤᎵᏍᏕᎸᏗ ᏓᎾᏓᏅᏍᎬᎢ ᎠᏠᏯᏍᏗᏍᎩ ᎯᎠ [[Knights of the Round Table|ᎤᎵᏍᏕᎸᏗ  ᎯᎠ ᎦᏌᏆᎸ ᎦᏍᎩᎶ]] [[Arthurian legend|Arthurian ᏄᎵᏍᏔᏂᏙᎸ]]), ᎠᎴ ᎯᎠ [[Marquess of Queensberry rules|Marquess  Queensberry ᏗᎫᎪᏔᏅ]] (ᎫᏢᎥᏍᎬ ᎠᏥᎡᏗᏱ).
+ᎠᏥᎡᏗᏱ ᎠᎾᏍᎬᏘ ᎠᎩᏍᏗ ᎾᎿᎢ ᎭᏫᎾᏗᏢ ᎤᏙᎯᏳ ᎠᏫᏒᏗ [[law|ᎠᏍᏓᏩᏛᏍᏙᏗ]]ᎠᎴ ᎾᏍᏋ unregulated. ᏱᏓᏟᎶᏍᏔᏅ ᏗᎫᎪᏔᏅ ᎠᏠᏯᏍᏛ ᎯᎠ [[Geneva Convention|Geneva ᎤᏓᏂᏝᏅ]] (ᎫᏢᎥᏍᎬ ᎯᎠ ᎧᏅᏩᏅᎯ ᎠᏂᏯᏫᏍᎩ ᎭᏫᎾᏗᏢ ᏓᏄᏩ), lyudetiyvda [[chivalry|ᏓᎾᏩᏄᏁᎯ]] (ᎯᎠ ᎠᏍᏓᏩᏛᏍᏙᏗ ᎤᎪᏗᏗ ᎤᎵᏍᏕᎸᏗ ᏓᎾᏓᏅᏍᎬᎢ ᎠᏠᏯᏍᏗᏍᎩ ᎯᎠ [[Knights of the Round Table|ᎤᎵᏍᏕᎸᏗ  ᎯᎠ ᎦᏌᏆᎸ ᎦᏍᎩᎶ]] [[Arthurian legend|Arthurian ᏄᎵᏍᏔᏂᏙᎸ]]), ᎠᎴ ᎯᎠ [[Marquess of Queensberry rules|Marquess Queensberry ᏗᎫᎪᏔᏅ]] (ᎫᏢᎥᏍᎬ ᎠᏥᎡᏗᏱ).
 
 ᎠᏥᎡᏗᏱ ᎭᏫᎾᏗᏢ [[warfare|ᏓᎾᏩᏄᏁᎯ]] ᎠᏓᏠᏯᏍᏙᏗ ᏔᎵ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᏧᏓᎴᎾᎢ [[military|ᎠᏂᏯᏫᏍᎩ]] ᏧᎾᏙᏢᎯ, ᎤᏠᏱᎭ ᏓᎾᎵᎲ ᎾᏍᎩᎾᎢ ᎠᏰᎵ ᏚᎾᏙᏢᏒ ᎾᎾᎢ ᏓᏄᏩ (ᎾᏍᎩ ᎤᏁᎳᎩ [[guerrilla warfare|guerrilla ᏓᎾᏩᏄᏁᎯ]] ᎠᎴ ᎤᏲᏨᎯ [[insurgencies]] ᏰᎵᏇ ᎤᎶᏒᎩ ᏙᏯᏗᏢ ᎪᎯ ᏩᏎᏍᏗ ᎾᎿ). ᏓᎾᏩᏄᏁᎯ ᎦᎶᏍᎦ ᎭᏫᎾᏗᏢ ᎯᎠ [[laws of war|ᏧᏂᎧᎿᏩᏛᏍᏗ  ᏓᏄᏩ]], ᎦᏙ ᎤᏍᏗ ᎢᏚᏳᎪᏛ Ꮝ ᏂᏚᏰᎸᏛᎢ ᎠᎴ ᎾᏛᏁᎲ, ᎠᎴ ᎠᏓᏍᏕᎸᏗ ᎯᎠ ᏂᏚᏳᎪᏛ [[soldiers|ᎠᏂᏯᏫᏍᎩ]] ᎠᎴ [[non-combatants|ᎬᏙᏗ-ᎤᏓᏂᏝᏅ]].
 
@@ -24,8 +24,7 @@
 * [[Warfare|ᏓᎾᏩᏄᏁᎯ]]
 * [[Weapon|ᎠᎾᎵᏏᎾᎯᏍᏗᏍᎬ]]
 
-[[Category:Violence]]
-[[Category:Military conflicts]]
+[[Category:ᎠᎾᎵᏖᎸᎲᏍᎬ ᎦᏁᏰᎩ]]
 
 [[bg:Бой]]
 [[cs:Boj]]
