--- a/Indo-European_languages.mw
+++ b/Indo-European_languages.mw
@@ -1,4 +1,8 @@
-ᎮᎳ ᏂᎦᏓ ᏧᏂᏬᏂᎯᏍᏗ ᎠᏂᏳᏁᎦ ᏧᏂᏬᏂᏍᎪᎢ - ᏲᏁᎦ, ᎠᏍᏆᏂ, ᎠᏓᏥ, ᎠᎦᎸᏥ; ᏂᎦᏓ ᏐᏉ ᎢᏳᏩᎧᏔ ᏐᏉ ᎦᏬᏂᎯᏍᏗ ᏥᎨᏒ. ᎯᎳᎢᏳ, ᎤᏓᏍᏈᏍᏓ ᎠᏂᏴᏫ ᎢᎾᏗᏯ ᎠᏁᎮᎢ. ᎯᎠ ᎠᏂᏴᏫ ᏄᏓᎴ ᏅᏃ ᏧᎾᏚᎵᏍᎨᎢ. ᏃᏉ ᎤᏓᏍᏈᏍᏓ ᏄᏓᎴ ᎠᏰᎵ ᎠᏁᎰᎢ, ᎠᏎᏍᎩᏂ, ᏃᏉᏃ ᏍᏈᏍᏓ ᏄᏓᎴ ᎦᏬᏂᎯᏍᏗ ᏧᏂᏬᏂᎰᎢ. ᏂᎪᎯᎸᎢ ᏱᏂᎦᎵᏍᏘᎰᎢ, ᏐᏉ ᎦᏬᏂᎯᏍᏗ ᏧᏂᏬᏂᎰᎢ ᏍᏈᏍᏓ ᎠᏂᏴᏫ, ᎦᏬᏂᎯᏍᏗ ᎪᎱᏍᏗ ᏄᏓᎴ ᏂᎦᎵᏍᏘᎰᎢ. ᎯᎠᏍᏊ: ᎠᏂᎶᎻ ᎳᏘᏂ ᏧᏂᏬᏂᎮᎢ, ᎠᏎᏃ ᏃᏉ ᎠᏂᏍᏆᏂ ᏤᏍᏗ ᎳᏘᏂ ᏳᏂᏬᏂᎰᎢ. ᎠᏍᏆᏂ ᏧᏂᏬᏂᎰᎢ. ᎯᎠᏍᏊ, ᎳᏘᏂ ᏃᎴ Greek, ᏃᎴ ᎠᏂᎨᎵᏘᎦ ᏧᏂᏬᏂᎯᏍᏗ ᏐᏉᏏᏓᏁᎳ. ᎯᎠᏃ ᎦᏓᎧ - ᎯᎳᎢᏳ, ᏐᏉ ᎦᏬᏂᎯᏍᏗ ᏥᎨᏒᎢ.
+ᎮᎳ ᏂᎦᏓ ᏧᏂᏬᏂᎯᏍᏗ ᎠᏂᏳᏁᎦ ᏧᏂᏬᏂᏍᎪᎢ - ᏲᏁᎦ, ᎠᏍᏆᏂ, ᎠᏓᏥ, ᎠᎦᎸᏥ; ᏂᎦᏓ ᏐᏉ ᎢᏳᏩᎧᏔ ᏐᏉ ᎦᏬᏂᎯᏍᏗ ᏥᎨᏒ. ᎯᎳᎢᏳ, ᎤᏓᏍᏈᏍᏓ ᎠᏂᏴᏫ ᎢᎾᏗᏯ ᎠᏁᎮᎢ. ᎯᎠ ᎠᏂᏴᏫ ᏄᏓᎴ ᏅᏃ ᏧᎾᏚᎵᏍᎨᎢ. ᏃᏉ ᎤᏓᏍᏈᏍᏓ ᏄᏓᎴ ᎠᏰᎵ ᎠᏁᎰᎢ, ᎠᏎᏍᎩᏂ, ᏃᏉᏃ ᏍᏈᏍᏓ ᏄᏓᎴ ᎦᏬᏂᎯᏍᏗ ᏧᏂᏬᏂᎰᎢ. ᏂᎪᎯᎸᎢ ᏱᏂᎦᎵᏍᏘᎰᎢ, ᏐᏉ ᎦᏬᏂᎯᏍᏗ ᏧᏂᏬᏂᎰᎢ ᏍᏈᏍᏓ ᎠᏂᏴᏫ, ᎦᏬᏂᎯᏍᏗ ᎪᎱᏍᏗ ᏄᏓᎴ ᏂᎦᎵᏍᏘᎰᎢ. ᎯᎠᏍᏊ: ᎠᏂᎶᎻ ᎳᏘᏂ ᏧᏂᏬᏂᎮᎢ, ᎠᏎᏃ ᏃᏉ ᎠᏂᏍᏆᏂ ᏤᏍᏗ ᎳᏘᏂ ᏳᏂᏬᏂᎰᎢ. ᎠᏍᏆᏂ ᏧᏂᏬᏂᎰᎢ. ᎯᎠᏍᏊ, ᎳᏘᏂ ᏃᎴ [[Greek|ᎠᎪᎢ]], ᏃᎴ ᎠᏂᎨᎵᏘᎦ ᏧᏂᏬᏂᎯᏍᏗ ᏐᏉᏏᏓᏁᎳ. ᎯᎠᏃ ᎦᏓᎧ - ᎯᎳᎢᏳ, ᏐᏉ ᎦᏬᏂᎯᏍᏗ ᏥᎨᏒᎢ.
+
+[[Category:ᏓᎶᏂᎦᏍᏛ]]
+[[Category:ᏳᎳᏗ]]
+[[Category:ᎦᏬᏂᎯᏍᏗ]]
 
 [[af:Indo-Europese tale]]
 [[als:Indogermanische Sprachfamilie]]
