--- a/ᏳᎳᏛ.mw
+++ b/ᏳᎳᏛ.mw
@@ -1,5 +1,7 @@
-ᎡᎶᏆ is a [[ᎡᏆᎦᏙᎯ]] <!-- continent --> ᎤᏗᎵᎬᏱ of [[ᎠᏏᎠ]] and ᎤᏴᏢᎢ of [[ᎠᎱᎵᎧ]] <!-- Africa -->. 
-[[File:LocationEurope.png|thumb|250px|ᎡᎶᏆ]]
+ᏳᎳᏛ [[ᎡᏆ ᎦᏙᎯ]], ᎾᎥᏂᎨᏍᏙᏗ [[ᏓᎶᏂᎦᏍᏛ]].
+
+[[File:LocationEurope.png|thumb|250px|ᏳᎳᏛ]]
+[[File:Europe satellite orthographic.jpg|thumb|350px|ᏗᏟᎶᏍᏔᏄ]]
 * [[Russia]]
 * [[ᏳᎬᎳᎢᏅ]]
 * [[ᏇᎳᎷᏒ]]
@@ -32,19 +34,19 @@
 * [[Spain]]
 * [[Switzerland]]
 * [[Turkey]]
-* [[United Kingdom]]
-* the [[Netherlands]]
+* [[United Kingdom|ᎦᎵᏍᏏᎯ]]
+* The [[Netherlands]]
 
-[[File:Europe satellite orthographic.jpg|350px|ᏗᏟᎶᏍᏔᏄ]]
-<br />
-<br />
 <div align="left">{{ᎡᎶᏆ}}</div>
 
 {{stub}}
 
 See also: [[List of European countries with Native names]].
 
-[[Category:ᎡᎶᏆ]]
+==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
+{{Commonscat|Europe}}
+
+[[Category:ᏳᎳᏛ| ]]
 
 [[ab:Европа]]
 [[ace:Iërupa]]
