--- a/ᏴᏭᏁᎦ.mw
+++ b/ᏴᏭᏁᎦ.mw
@@ -1,5 +1,5 @@
-[[File:Masterpieces.jpg|thumb|ᎩᎵᏏ ᏗᎪᏪᎵ]]
-'''ᎩᎵᏏ''' (ᏲᏁᎦ) [[ᎠᏨᏍᏘᏱ]] [[ᎦᏬᏂᎯᏍᏗ]]. ᎩᎵᏏᏃ ᎦᏬᏂᎯᏍᏗ ᎠᏰᎵ ᎤᏒᎧᎵ [[ᎠᎺᎢ]], ᎩᎵᏏ, [[ᎠᎤᏍᏞᎢᏯ]], ᎠᎴ ᎠᏂᏐᎢ.
+[[File:Masterpieces.jpg|thumb|ᏴᏭᏁᎦ ᏗᎪᏪᎵ]]
+'''ᏴᏭᏁᎦ''' '''ᎩᎵᏏ''' [[ᎦᏬᏂᎯᏍᏗ]]. ᎩᎵᏏᏃ ᎦᏬᏂᎯᏍᏗ ᎠᏰᎵ ᎤᏒᎧᎵ [[ᎠᎺᎢ]], ᎩᎵᏏ, [[ᎠᎤᏍᏞᎢᏯ]], ᎠᎴ ᎠᏂᏐᎢ.
 
 ==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
 {{Commonscat|English language}}
