--- a/ᎢᏓᎵᏱ.mw
+++ b/ᎢᏓᎵᏱ.mw
@@ -8,17 +8,20 @@
 | Population = 107,000,000
 | Population year = 
 | ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎢᏔᎵᎠᏃ]]
-| ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = Rome
-| ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = Rome
+| ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[Rome|ᎶᎻ]]
+| ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = [[Rome|ᎶᎻ]]
 | ᏚᎬᏫᏳᎯ ᏂᎰᏂ = Giorgio Napolitano
 | ᎠᏕᎳ = ᎡᎶ
 }}
 
-'''ᎢᎳᎵ''' ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᎡᎶᏆ]].
+'''ᎢᎳᎵ''' ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᏳᎳᏛ]].
+
+==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
+{{Commonscat|Italy}}
 
 {{stub}}
 
-[[Category:ᎡᎶᏆ]]
+[[Category:ᏳᎳᏛ]]
 
 [[ab:Италиа]]
 [[ace:Itali]]
