updating link, the transliteration would probably be closer to ᎳᎷᏏᎠ

--- a/ᏇᎳᎷᏍ.mw
+++ b/ᏇᎳᎷᏍ.mw
@@ -10,12 +10,12 @@
 | ᏚᎬᏫᏳᎯ ᏂᎰᏂ = Аляксандр Лукашэнка
 | ᎠᏕᎳ = Беларускі рубель
 }}
-'''ᏇᎳᎷᏒ''' ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗtᎥ [[ᎡᎶᏆ]].
+'''ᏇᎳᎷᏒ''' ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗtᎥ [[ᏳᎳᏛ]].
 
  
 {{Stub}}
 
-[[Category:ᎡᎶᏆ]]
+[[Category:ᏳᎳᏛ]]
 
 [[ace:Bèlarusia]]
 [[af:Wit-Rusland]]
