--- a/ᎠᏂᏙᎳ.mw
+++ b/ᎠᏂᏙᎳ.mw
@@ -14,11 +14,11 @@
 | ᎠᏕᎳ = ᎡᎶ
 }}
 
-'''ᎠᏅᏙᎳ''' ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᎡᎶᏆ]].
+'''ᎠᏅᏙᎳ''' ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᏳᎳᏛ]].
 
 {{stub}}
 
-[[Category:ᎡᎶᏆ]]
+[[Category:ᏳᎳᏛ]]
 
 [[ace:Andorra]]
 [[af:Andorra]]
