--- a/ᏣᎳᎩ_ᎧᏬᏂᎯᏍᏗ.mw
+++ b/ᏣᎳᎩ_ᎧᏬᏂᎯᏍᏗ.mw
@@ -1,5 +1,4 @@
-[[File:Cherokee lang.png|thumb|200px|ᏣᎳᎩ ᎧᏬᏂᎯᏍᏗ]]
-
+[[Image:Cherokee USC2000 PHS NCandOK.svg|thumb|260px|ᏣᎳᎩ ᎧᏬᏂᎯᏍᏗ]]
 [[ᎠᏂᏣᎳᎩ]] ᎠᏂᏬᏂᏍᎩ ''polysynthetic'' [[ᎧᏬᏂᎯᏍᏗ]]. ᏣᎳᎩ ᎦᏬᏂᎯᏍᏗ ᎤᏐᏱ ᏏᏓᏁᎳ Iroquoian ᏧᏂᏬᏂᎯᏍᏗ, ᎠᏎᏃ, ᏍᏈᏍᏓ ᏗᏑᏕᏘᏴᏓ ᏥᎨᏒ, ᏐᏉ ᎦᏬᏂᎯᏍᏗ ᏱᎩ. ᎠᏂᏣᎳᎩ ᎠᏂᏴᏫᏯ ᏧᏃᎯᏳ, ᎤᏁᎳᏅᎯ ᎦᏬᏂᎯᏍᏗ ᎤᏮᏏ ᏥᎨᏒᎢ. 1820Ꮫ, [[ᏍᏏᏉᏯ]], ᎠᎴ George Gist, ᎯᎠ ᏣᎳᎩ ᏗᎪᏪᎵ ᎪᏪᎵᏍᎨᎢ. ᏃᏉ ᎯᎠ Unicode ᎢᎩᎭ (ᎭᏫᎾᏗᏢ). ᎯᎠᏃ ᎦᏓᎧ, ᎡᎵᏉ, ᏣᎳᎩ ᎢᎪᏪᎶᏗ [[ᎤᏅᏥᏓ ᎤᎾᎦᎵᏍᎩ]]. ᎯᎠᏍᏊ ᏄᏓᎴᎢ ᎪᎱᏍᏗ ᎤᏰᎵᏛ ᏂᎦᎵᏍᏗᎮᎢ: 2007 ᏥᎨᏒ, [[ᎥᎭᏴᎵ ᏗᏰᎴᎩ]] (Myrtle Driver Johnson) ᎠᎬᏱ ᎢᏳᏩᎧᏔ 1800Ꮝ ᏥᎨᏒ, Charles Frazier ᏗᎪᏪᎵ ᎤᏤᎵ, [[ᏦᎦᏚ ᏅᏙ: ᏥᎨᎬᏬᎥᏗᏍᎨᎢ]] ᏣᎳᎩ ᎠᏁᏍᏗᏍᎩ ᎪᏪᎵᏍᎨᎢ.
 
 {|border="1" style="border-collapse: collapse;"
@@ -196,8 +195,22 @@
 |13F0||&nbsp;||Ᏸ||Ᏹ||Ᏺ||Ᏻ||Ᏼ||&nbsp;||&nbsp;||&nbsp;||&nbsp;||&nbsp;||&nbsp;||&nbsp;||&nbsp;||&nbsp;||&nbsp;||&nbsp;
 |}
 
+==ᎯᎪᏩᏔ ᎾᏍᎦ ᎾᏍᏇ==
+*[[ᏍᏏᏉᏯ]]
+
+==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
+{{Commonscat|Cherokee script}}
+* [http://www.cherokee.org/Culture/Lexicon/Default.aspx ᏣᎳᎩᎯ ᎠᏰᎵ ᏗᎧᏁᎢᏍᏗ]
+* [http://public.csusm.edu/public/raven/cherokee.dir/cherlexi.html ᏣᎳᎩ ᏗᎧᏁᎢᏍᏗ]
+* [http://www.auburn.edu/outreach/dl/echota/tlr_about_cherokee.php ᎢᏦᏔ ᏣᎳᎩ ᎧᏬᏂᎯᏍᏗ Project]
+* [http://www.cherokeenewtestament.org Cherokee New Testament Online] Online translation of the New Testament.  Currently the largest Cherokee document on the internet.
+* [http://www.unicode.org/charts/PDF/U13A0.pdf Unicode Chart]
+* [http://wiki.langwiki.info/Cherokee WikiLang ᏣᎳᎩ page (Basic grammar information)]
+* [http://www.unilang.org/viewtopic.php?f=99&t=27425&st=0&sk=t&sd=a&start=120#p615095 UNILANG forum for freely available teaching materials.] (Includes PDF textbook and audio files).
 
 {{stub}}
+[[Category:ᏣᎳᎩ]]
+[[Category:ᎧᏬᏂᎯᏍᏗ]]
 
 [[ang:Ceroke sprǣc]]
 [[bar:Cherokee (Sproch)]]
