+ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ, +ᏗᏟᎶᏍᏔᏅ

--- a/ᏍᏆᏂ_ᎧᏬᏂᎯᏍᏗ.mw
+++ b/ᏍᏆᏂ_ᎧᏬᏂᎯᏍᏗ.mw
@@ -1,4 +1,5 @@
-'''ᏍᏆᏂ''' ([[ᎦᏬᏂᎯᏍᏗ]])
+[[File:Spanish Language Map.svg|thumb|300px|ᏍᏆᏂ ᎧᏬᏂᎯᏍᏗ [[ᎡᎶᎯ]]-Ꭿ]]
+'''ᏍᏆᏂ ᎦᏬᏂᎯᏍᏗ''' ᎠᎴᏅᏙᏗ [[ᏍᏆᏂ]], [[ᏳᎳᏛ]]-Ꭿ.
 
 * [[ᎺᎯᎪ]]
 * [[ᏍᏆᏂ]]
@@ -19,6 +20,8 @@
 * [[Uruguay]]
 * [[Venezuela]]
 
+==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
+{{Commonscat|Spanish language}}
 {{stub}}
 
 [[ace:Bahsa Seupanyo]]
