--- a/ᎠᏂᏙᎢᏥ_ᎧᏬᏂᎯᏍᏗ.mw
+++ b/ᎠᏂᏙᎢᏥ_ᎧᏬᏂᎯᏍᏗ.mw
@@ -1,6 +1,9 @@
-[[File:Map German World.png|300px|right]]
-'''ᎠᏛᏥ''' ([[ᎦᏬᏂᎯᏍᏗ]])
+[[File:Map German World.png|300px|thumb|ᎠᏛᏥ ᎦᏬᏂᎯᏍᏗ [[ᎡᎶᎯ]]-Ꭿ]]
+'''ᎠᏛᏥ ᎦᏬᏂᎯᏍᏗ''' ᎠᎴᏅᏙᏗ [[ᏍᏆᏂ]], [[ᏳᎳᏛ]]-Ꭿ. 200,000,000 ᎠᏂᏴᏫ ᎠᏛᏥ ᎦᏬᏂᎯᏍᏗ ᎠᏬᏂᎭ. 
 {{stub}}
+
+[[Category:ᏳᎳᏛ]]
+[[Category:ᎦᏬᏂᎯᏍᏗ]]
 
 [[ab:Алман бызшәа]]
 [[af:Duits]]
