--- a/ᏍᏆᏂ_ᎧᏬᏂᎯᏍᏗ.mw
+++ b/ᏍᏆᏂ_ᎧᏬᏂᎯᏍᏗ.mw
@@ -24,6 +24,9 @@
 {{Commonscat|Spanish language}}
 {{stub}}
 
+[[Category:ᏳᎳᏛ]]
+[[Category:ᎦᏬᏂᎯᏍᏗ]]
+
 [[ace:Bahsa Seupanyo]]
 [[af:Spaans]]
 [[als:Spanische Sprache]]
