--- a/ᏙᎩᏲ.mw
+++ b/ᏙᎩᏲ.mw
@@ -1,4 +1,4 @@
-'''ᏙᎩᏲ''' [[ᎠᏏᎠ]], [[ᏣᏆᏂ]] ᎦᏚᎲᎢ. ᏣᏆᏂ ᎠᎴ ᏙᎩᏲ ᎠᎵᏍᏓᏴᏗ: [[ᏑᏏ]]. [[File:Tokyo night view 1.jpg|thumb|ᏙᎩᏲ ᏒᏃᏱ]]
+'''ᏙᎩᏲ''' [[ᏓᎶᏂᎦᏍᏛ]], [[ᏣᏆᏂ]] ᎦᏚᎲᎢ. ᏣᏆᏂ ᎠᎴ ᏙᎩᏲ ᎠᎵᏍᏓᏴᏗ: [[ᏑᏏ]]. [[File:Tokyo night view 1.jpg|thumb|ᏙᎩᏲ ᏒᏃᏱ]]
 
 {|border="1" cellpadding="5" cellspacing="0" align="center"
 |+ <center><h3>ᏙᎩᏲ ᏙᏯᏗᎳᏄᏍᏗᏓᏅ</h3></center>
@@ -43,10 +43,7 @@
 |ᎠᎦᏍᎬ:<br /> 1.56"
 |}
 
-
-
-
-
+[[Category:ᏓᎶᏂᎦᏍᏛ]]
 {{stub}}
 
 [[ace:Tokyo]]
