+ᎤᎾᏓᏟᏌᎲ, rephrasing lede, removing transliterations of county names (some of these countries might have actual names)

--- a/ᎬᎿᎨᏍᏛ.mw
+++ b/ᎬᎿᎨᏍᏛ.mw
@@ -1,12 +1,7 @@
-ᎠᎱᎵᎧ... [[ᎡᏆᎦᏙᎯ]] ... [[File:Africa (orthographic projection).svg|thumb|right|ᎠᎱᎵᎧ]]
+[[File:Africa (orthographic projection).svg|thumb|ᎬᎿᎦᏍᏛ]]
+'''ᎬᎿᎦᏍᏛ''' ᎡᏆ ᎦᏙᎯ. ᎯᎠ ᎠᏂᏴᏫ ᎠᎴᏅᏙᏗ.
 
-<!-- Excuse my poor ᏣᎳᎩ, trying to transliterate (as an example) in order: Ethiopia, Congo, Morocco, Botswana, and Ghana. Add more! -->
-* [[ᎡᏘᎣᎢᎠ]] 
-* [[ᎪᏅᎪ]]
-* [[ᎼᎶᎪ]]
-* [[ᎣᏧᏩᎾ]]
-* [[ᎦᎾ]]
-....
+[[Category:ᎬᎿᎦᏍᏛ| ]]
 
 [[ace:Afrika]]
 [[af:Afrika]]
