--- a/ᎠᎵᏇᏂᏯ.mw
+++ b/ᎠᎵᏇᏂᏯ.mw
@@ -1,10 +1,11 @@
-'''ᎠᎸᏇᏂᏯ''' ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᎡᎶᏆ]].
+'''ᎠᎸᏇᏂᏯ''' ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᏳᎳᏛ]].
 
 [[File:LocationAlbania.png]]
 
 [[File:Satellite image of Albania in June 2000.jpg|thumb|ᏗᏟᎶᏍᏔᏄ]]
 
 {{stub}}
+[[Category:ᏳᎳᏛ]]
 
 [[ab:Арнауыҭтәыла]]
 [[ace:Albania]]
