--- a/ᎨᎾᏓ.mw
+++ b/ᎨᎾᏓ.mw
@@ -3,6 +3,7 @@
 '''ᎧᎾᏓ''' ([[ᎠᎦᎸᏥ]] ᎦᏬᏂᎯᏍᏗ, ''Canada'') — ᎤᏴᏢᎢ-ᎠᎺᎵᎦ ᎠᏰᎵ ᎤᏙᏢᏒ ᏭᏕᎵᎬᏗᏢ ᎠᏰᎵ-ᎢᏴ ᎠᎳᏍᎦᎶᏗ ᎨᏒ, ᎤᎭ ᎬᏩᏚᏫᏛ 107,000,000 ᎠᏂᎤᏁᎦ. ᏄᎬᏫᏳᏌᏕᎩ, ᏧᏂᎸᏫᏍᏓᏁᏗ ᎨᎦᏓᏅᏖᎮᎯ ᎨᏒᎢ. [[ᎠᎺᎢ]].
 
 {{stub}}
+[[Category:ᏧᏴᏢ ᎠᎹᏰᎵ]]
 
 [[ab:Канада]]
 [[ace:Kanada]]
