--- a/ᏦᏍᎪᎯᏍᎩᏁ_ᎤᎬᏫᏳᎯ.mw
+++ b/ᏦᏍᎪᎯᏍᎩᏁ_ᎤᎬᏫᏳᎯ.mw
@@ -68,6 +68,6 @@ Republican ᎨᏎᎢ. ᎤᏴᏜ.
 ᎤᏍᏓᏴᎲᏍᎩ. ᎾᏍᎪᏣᏁᎴ ᏳᏕᏘᏴᏓ ᎨᏎᎢ ᎤᎬᏫᏳ ᎤᏓᏴᏎᎳ. ᏏᏍᎩᎾ ᎤᎬᏫᏳᎯ ᎪᎯᏥᎩ.
 ᎠᏴᎤᎢ ᎠᎬᎾᎨ ᎤᎬᏫᏳᎯ ᎤᏴᏢᎯ. ᎤᎦᎾᏩ Ꮧ.
 
-[[Category:ᎠᎹᏰᎵ]]
+[[Category:ᎠᎹᏰᏟ]]
 [[Category:ᎠᏂᏴᏫ]]
 [[Category:ᎠᏰᎵ ᎤᏙᏢᏒ]]
