--- a/ᎶᎹᏂᏯ.mw
+++ b/ᎶᎹᏂᏯ.mw
@@ -1,6 +1,7 @@
 [[File:Location Romania EU Europe.PNG|thumb|right|ᎶᎹᏂᏯ]]'''ᎶᎹᏂᏯ''' ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᎡᎶᏆ]].
 
 {{stub}}
+[[Category:ᏳᎳᏛ]]
 
 [[ace:Rumania]]
 [[af:Roemenië]]
