--- a/ᏳᎧᎴᏂ.mw
+++ b/ᏳᎧᎴᏂ.mw
@@ -1,6 +1,7 @@
 [[File:Location Ukraine Europe.png|thumb|ᏳᎬᎳᎢᏅ]]'''ᏳᎬᎳᎢᏅ''' ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗtᎥ [[ᎡᎶᏆ]].
 
 {{stub}}
+[[Category:ᏳᎳᏛ]]
 
 [[ab:Украина]]
 [[ace:Ukraina]]
